--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -2686,14 +2686,13 @@ sort: by_weight
 绖	dxaa
 绖	dxaava
 叠	dxaoia
-揲	dxi
-蝶	dxia
+蝶	dxi
 蝶	dxiavi
 佚	dxiu
 揲	dxiuv
 揲	dxiuvi
 佚	dxiuvv
-喋	dxo
+跌	dxo
 谍	dxoa
 谍	dxoavi
 蹀	dxoi
@@ -2701,19 +2700,20 @@ sort: by_weight
 跌	dxoiuv
 昳	dxoiuv
 蹀	dxoivi
+喋	dxov
 咥	dxov
 咥	dxovao
 喋	dxovi
 喋	dxovii
-耋	dxu
+爹	dxu
 鲽	dxua
 鲽	dxuavi
 牒	dxui
 牒	dxuivi
-爹	dxuo
-䏲	dxuou
+䏲	dxuo
 爹	dxuoua
 䏲	dxuoua
+耋	dxuov
 耋	dxuova
 瓞	dxuu
 瓞	dxuuuv
@@ -7836,8 +7836,8 @@ sort: by_weight
 罗	loiaua
 萝	loii
 倮	loiia
-落	loiiav
 倮	loiiav
+落	loiiav
 萝	loiiia
 荦	loiiu
 蓏	loiiuu
@@ -8438,17 +8438,17 @@ sort: by_weight
 溟	mgaoao
 洺	mgau
 洺	mgauao
-茗	mgi
+命	mgi
 瞑	mgia
 螟	mgiao
 瞑	mgiaoa
 螟	mgiaoa
-蓂	mgii
+茗	mgii
+蓂	mgiio
 蓂	mgiioa
 茗	mgiiua
 铭	mgio
 铭	mgioua
-命	mgiv
 命	mgivoa
 明	mgo
 冥	mgoa
@@ -8801,8 +8801,8 @@ sort: by_weight
 莽	mpiivu
 盲	mpo
 忙	mpooov
-邙	mpov
-氓	mpova
+氓	mpov
+邙	mpova
 邙	mpovai
 氓	mpovav
 盲	mpovia
@@ -8832,8 +8832,8 @@ sort: by_weight
 蛑	mriaao
 侔	mriao
 侔	mriaou
-哞	mro
-谋	mroa
+谋	mro
+哞	mroa
 哞	mroaou
 谋	mroavi
 某	mrvivv
@@ -8847,12 +8847,10 @@ sort: by_weight
 姥	muauu
 姥	muauuo
 沐	muav
-拇	mui
-睦	muia
+睦	mui
 睦	muiavo
 目	muiavv
-苜	muii
-募	muiia
+募	muii
 募	muiiau
 慕	muiii
 苜	muiiia
@@ -8864,22 +8862,23 @@ sort: by_weight
 墓	muiivo
 钼	muio
 钼	muioia
-仫	muiu
+拇	muiu
+仫	muiua
 拇	muiuaa
 仫	muiuao
-呣	muo
+亩	muo
+呣	muoa
 呣	muoaao
 𧿹	muoi
 𧿹	muoiaa
-亩	muov
 亩	muovia
 牧	muu
-毪	muuv
+牡	muuv
+毪	muuva
 毪	muuvao
 穆	muuvu
 穆	muuvui
 牧	muuvuv
-牡	muuvv
 牡	muuvvo
 木	muv
 模	muvi
@@ -8891,9 +8890,9 @@ sort: by_weight
 妹	mwa
 湄	mwaa
 湄	mwaaiv
-郿	mwai
+眉	mwai
+郿	mwaia
 郿	mwaiai
-眉	mwaii
 眉	mwaiia
 鹛	mwaiu
 鹛	mwaiua
@@ -8916,14 +8915,14 @@ sort: by_weight
 镅	mwioa
 镅	mwioai
 镁	mwioou
-昧	mwo
+美	mwo
 袂	mwoa
 袂	mwoaav
+昧	mwoi
 昧	mwoivv
 寐	mwoo
 寐	mwooai
-美	mwou
-煤	mwouv
+煤	mwou
 煤	mwouvi
 美	mwouvu
 糜	mwov
@@ -9025,12 +9024,11 @@ sort: by_weight
 呐	neoi
 呐	neoiau
 年	nf
-撵	nfi
+念	nfi
 蔫	nfii
 蔫	nfiivi
-念	nfio
 念	nfiooa
-捻	nfiu
+撵	nfiu
 拈	nfiui
 捻	nfiuio
 拈	nfiuiv
@@ -9061,12 +9059,12 @@ sort: by_weight
 拧	ngiuoo
 佞	ngiv
 佞	ngivva
-咛	ngo
-甯	ngoo
+凝	ngo
+咛	ngoo
+甯	ngooo
 咛	ngoooa
 甯	ngoooa
 宁	ngoovi
-凝	ngov
 凝	ngovua
 狞	ngu
 狞	nguaoo
@@ -12466,13 +12464,13 @@ sort: by_weight
 逖	tiuaoa
 鳀	tiuaoi
 䴘	tiuuua
-醍	tiv
+梯	tiv
 棣	tiva
 棣	tivavv
+醍	tivi
 醍	tivioi
 趯	tivo
 趯	tivoao
-梯	tivou
 梯	tivoua
 替	tivv
 瑅	tivvo
@@ -16307,7 +16305,7 @@ sort: by_weight
 蔗	zeiiov
 锗	zeio
 锗	zeiouo
-摺	zeiu
+折	zeiu
 择	zeiua
 择	zeiuao
 摺	zeiuao
@@ -16317,7 +16315,6 @@ sort: by_weight
 哲	zeiuo
 晢	zeiuoi
 哲	zeiuoo
-折	zeiuu
 折	zeiuuu
 啧	zeo
 谪	zeoa
@@ -17186,22 +17183,22 @@ sort: by_weight
 彰	zpovu
 章	zpovuo
 彰	zpovuu
-脏	zpu
+长	zpu
 獐	zpua
 獐	zpuaov
+脏	zpuo
 脏	zpuovu
 胀	zpuu
 胀	zpuuva
-长	zpuv
 长	zpuvao
-璋	zpv
+丈	zpv
 樟	zpvo
 樟	zpvovo
-丈	zpvu
 丈	zpvuoo
 臧	zpvuv
 臧	zpvuvi
 杖	zpvv
+璋	zpvvo
 璋	zpvvov
 杖	zpvvuo
 走	zr
@@ -17215,8 +17212,8 @@ sort: by_weight
 骤	zraavi
 陬	zrai
 陬	zraivi
-赒	zrao
-洲	zraou
+洲	zrao
+赒	zraou
 赒	zraoua
 洲	zraouo
 妯	zrau
@@ -17289,20 +17286,21 @@ sort: by_weight
 髽	zsv
 髽	zsviii
 转	zt
-缵	zta
+赚	zta
+缵	ztaa
 缵	ztaauv
-赚	ztao
 赚	ztaoou
-撰	zti
+钻	zti
 颛	ztia
 僎	ztiaa
 僎	ztiaaa
 颛	ztiavu
-钻	ztio
 钻	ztioiv
-攥	ztiu
+撰	ztiu
 撰	ztiuav
+攥	ztiuu
 攥	ztiuuv
+传	ztiv
 传	ztivva
 啭	zto
 躜	ztoi
