更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -6070,16 +6070,15 @@ sort: by_weight
 拮	jsiuvo
 佳	jsiv
 佳	jsivov
-跏	jso
+家	jso
 袷	jsoa
-袷	jsoai
 袷	jsoaiv
 咖	jsoau
 咖	jsoauo
+跏	jsoi
 跏	jsoiau
 斝	jsoo
 斝	jsoooo
-家	jsoov
 家	jsoovu
 痂	jsov
 瘕	jsova
