--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -5478,7 +5478,7 @@ sort: by_weight
 键	jfioav
 锏	jfioo
 锏	jfiooi
-拣	jfiu
+件	jfiu
 捡	jfiuiv
 搛	jfiuo
 搛	jfiuou
@@ -8659,9 +8659,9 @@ sort: by_weight
 蠓	mmiaii
 虻	mmiao
 虻	mmiaov
-瞢	mmii
+萌	mmii
+瞢	mmiii
 瞢	mmiiia
-萌	mmiio
 萌	mmiioi
 鹲	mmiiu
 鹲	mmiiua
@@ -15440,8 +15440,9 @@ sort: by_weight
 仰	ypiu
 仰	ypiuaa
 扬	ypiuau
-咉	ypo
-旸	ypoi
+养	ypo
+咉	ypoi
+旸	ypoia
 旸	ypoiau
 咉	ypoiav
 怏	ypoo
@@ -15453,7 +15454,6 @@ sort: by_weight
 恙	ypouoa
 羕	ypouoa
 烊	ypouou
-养	ypouu
 养	ypouui
 羊	ypouv
 羊	ypouvv
