--- a/rime/xkyddz.dict.yaml
+++ b/rime/xkyddz.dict.yaml
@@ -14988,7 +14988,7 @@ sort: by_weight
 佚	yiiuvv
 倚	yiiv
 倚	yiivuo
-易	yio
+意	yio
 邑	yioa
 译	yioaa
 诒	yioaao
@@ -15003,13 +15003,14 @@ sort: by_weight
 诣	yioaua
 祎	yioav
 祎	yioavv
-呓	yioi
+易	yioi
 咿	yioia
 咿	yioiav
+呓	yioii
 呓	yioiia
 易	yioiua
-噫	yioo
-忆	yiooa
+忆	yioo
+怡	yiooa
 忆	yiooaa
 怡	yiooao
 怿	yiooao
@@ -15019,7 +15020,7 @@ sort: by_weight
 悒	yioooa
 嗌	yioou
 嗌	yioouv
-宧	yioov
+噫	yioov
 宧	yioovi
 噫	yioovo
 益	yiou
@@ -15029,18 +15030,17 @@ sort: by_weight
 义	yiouo
 义	yiouoo
 燚	yiouou
-咦	yiov
-翊	yiova
+衣	yiov
+咦	yiova
 翊	yiovao
 咦	yiovav
 裔	yiovi
 裔	yiovia
 廙	yiovia
-意	yiovo
 裛	yiovoa
 意	yiovoa
 癔	yiovov
-衣	yiovu
+亦	yiovu
 衣	yiovua
 疫	yiovua
 毅	yiovua
