更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -11374,7 +11374,7 @@ sort: by_weight
 凘	siovv
 凘	siovvi
 十	siu
-氏	siua
+饰	siua
 饲	siuaa
 鲺	siuaau
 饲	siuaav
@@ -11384,7 +11384,6 @@ sort: by_weight
 狮	siuaiu
 鲥	siuao
 鲥	siuaoi
-饰	siuau
 饰	siuauv
 氏	siuav
 氏	siuava
@@ -14989,12 +14988,13 @@ sort: by_weight
 倚	yiiv
 倚	yiivuo
 意	yio
-邑	yioa
+议	yioa
 译	yioaa
 诒	yioaao
 译	yioaao
+邑	yioai
 邑	yioaiv
-议	yioao
+谊	yioao
 谊	yioaoo
 议	yioaou
 扆	yioaov
