--- a/rime/竖排悬浮.trime.yaml
+++ b/rime/竖排悬浮.trime.yaml
@@ -1362,20 +1362,19 @@ preset_keyboards:
   defaultVJ4:
     __include: /preset_keyboards/default
     __patch:
-        "keys/@17/label": "人 I"
+        "keys/@12/long_click": "一"
         "keys/@16/long_click": "丿er"
-        "keys/@17/long_click": "丨 i"
+        "keys/@17/long_click": "丨人"
         "keys/@18/long_click": "丶uo"
         "keys/@21/long_click": "乛"
         "keys/@22/long_click": sh
         "keys/@31/long_click": zh
         "keys/@33/long_click": ch
-        "keys/@34/long_click": "一 ui"
         "keys/@31/swipe_down": K_defaultMR
         "keys/@42/label": 星空一道
         "keys/@10/hint": iu
         "keys/@11/hint": ei
-        "keys/@12/hint": 零声母
+        "keys/@12/hint": "木 土o"
         "keys/@13/hint": ou
         "keys/@14/hint": uan
         "keys/@15/hint": un 
@@ -1395,11 +1394,11 @@ preset_keyboards:
         "keys/@31/hint": üe
         "keys/@32/hint": ie
         "keys/@33/hint": "(i,u)ang"
-        "keys/@34/hint": "木 土o"
+        "keys/@34/hint": "ü ui"
         "keys/@35/hint": in
         "keys/@36/hint": en
         "keys/@37/hint": eng
-        "keys/@34/key_text_color": sky
+        "keys/@12/key_text_color": sky
         "keys/@16/key_text_color": sky
         "keys/@17/key_text_color": sky
         "keys/@18/key_text_color": sky
@@ -1408,7 +1407,7 @@ preset_keyboards:
         "keys/@28/key_text_color": key_text_color
         "keys/@32/key_text_color": key_text_color
         "keys/@35/key_text_color": key_text_color
-        "keys/@12/key_text_color": 0xFFFF002B
+        "keys/@34/key_text_color": 0xFFFF002B
     key_symbol_offset_x: 0.5
     key_hint_offset_y: *VJhintY
     key_text_offset_y: *VJtextY 
