更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -36398,11 +36398,12 @@ sort: by_weight
 简单	jfdj
 煎蛋	jfdjo
 减淡	jfdjoa
-剪刀	jfdk
-尖刀	jfdki
-捡到	jfdkie
-见到	jfdkie
+见到	jfdk
+捡到	jfdki
+尖刀	jfdkia
 剑道	jfdkio
+键道	jfdkio
+剪刀	jfdko
 箭道	jfdku
 渐冻	jfdl
 见多	jfdo
@@ -90917,8 +90918,10 @@ sort: by_weight
 先苦后甜	xkht
 信口胡言	xkhy
 小口径	xkj
+星空键道	xkjd
 信口开河	xkkh
 下课铃	xkl
+星空两笔	xklb
 血口喷人	xkpr
 薛凯琪	xkq
 心口如一	xkry
@@ -90930,6 +90933,8 @@ sort: by_weight
 小可爱	xkv
 线控耳机	xkvj
 下框线	xkx
+星空一笔	xkyb
+星空一道	xkyd
 鲜克有终	xkyz
 许可证	xkz
 小康之家	xkzj
