更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -4930,12 +4930,14 @@ sort: by_weight
 不合	buhe
 不喝	buhee
 不含	buhj
+不好	buhk
 捕获	buho
 不惑	buhoe
 补货	buhoo
 不换	buht
-不回	buhv
-不悔	buhve
+不会	buhv
+不回	buhve
+不悔	buhveo
 不仅	bujb
 不禁	bujbe
 不尽	bujbea
@@ -15712,17 +15714,16 @@ sort: by_weight
 斗鸡走狗	djzg
 但在	djzh
 胆子	djzi
-弹指	djzia
-弹子	djziaa
+弹子	djzia
 淡芝	djziai
 淡紫	djziai
 大舅子	djzie
 担子	djzii
 掸子	djziia
-单子	djzio
+单字	djzio
+单子	djzioa
 单指	djzioi
 单只	djzioo
-单字	djzioo
 单质	djziou
 胆汁	djziu
 胆战	djzj
@@ -76062,7 +76063,8 @@ sort: by_weight
 土家族	tjz
 谈着	tjze
 毯子	tjzi
-通假字	tjzia
+弹指	tjzia
+通假字	tjziai
 坛子	tjzie
 套接字	tjziei
 坦直	tjzieu
@@ -102020,10 +102022,10 @@ sort: by_weight
 致辞	zicieu
 值此	zicii
 指斥	ziciiu
-只吃	zicio
+字词	zicio
 只此	zicioi
 之词	zicioo
-字词	zicioo
+只吃	zicioo
 之辞	ziciou
 自此	ziciu
 直尺	ziciua
