更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -14794,12 +14794,13 @@ sort: by_weight
 枍	yieuoe
 欹	yieuu
 欹	yieuua
-食	yii
-伊	yiia
-亿	yiiaa
+依	yii
+亿	yiia
+眙	yiiaa
 亿	yiiaaa
 眙	yiiaao
 峄	yiiaao
+伊	yiiae
 伊	yiiaee
 遗	yiiao
 遗	yiiaoa
@@ -14824,7 +14825,7 @@ sort: by_weight
 薏	yiiioe
 艾	yiiiu
 艾	yiiiuo
-依	yiio
+食	yiio
 钇	yiioa
 钇	yiioaa
 食	yiioae
