更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -13165,10 +13165,10 @@ sort: by_weight
 答礼	daliuo
 打烂	dalj
 打栏	dalji
-打捞	dalk
+大佬	dalk
 大牢	dalke
-大佬	dalkei
-打牢	dalki
+打捞	dalki
+打牢	dalkio
 打落	dalo
 大浪	dalp
 大郎	dalpe
@@ -64453,8 +64453,7 @@ sort: by_weight
 前无古人后无来者	qwgz
 前挽后推	qwht
 情为何物	qwhw
-气雾剂	qwj
-群文件	qwjf
+群文件	qwj
 潜望镜	qwjg
 去污剂	qwji
 气温计	qwjiu
@@ -86617,11 +86616,11 @@ sort: by_weight
 巍巍	wwwwi
 蔚为	wwwwio
 慰问信	wwx
-威信	wwxb
+微信	wwxb
 维新	wwxba
 违心	wwxbe
+威信	wwxbei
 唯心	wwxbo
-微信	wwxbu
 位相	wwxc
 未向	wwxce
 未详	wwxceo
