更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -662,10 +662,9 @@ sort: by_weight
 绑	bpaaee
 浜	bpau
 浜	bpauie
-彭	bpe
+棒	bpe
 邦	bpee
 邦	bpeeai
-棒	bpeee
 梆	bpeeee
 玤	bpeeee
 棒	bpeeee
@@ -676,6 +675,7 @@ sort: by_weight
 棓	bpeoeo
 塝	bpeoo
 塝	bpeooe
+彭	bpeou
 彭	bpeouu
 磅	bpeu
 磅	bpeuoe
@@ -7478,13 +7478,14 @@ sort: by_weight
 镠	lqioao
 锍	lqiooe
 镏	lqioua
-熘	lqo
-刘	lqoe
+刘	lqo
+瘤	lqoe
 刘	lqoeii
-瘤	lqoeu
+旒	lqoeu
 瘤	lqoeua
 旒	lqoeue
 六	lqoeuo
+熘	lqou
 熘	lqouua
 留	lqu
 遛	lqua
@@ -8210,6 +8211,7 @@ sort: by_weight
 艋	mmuua
 艋	mmuuai
 艨	mmuuii
+门	mn
 们	mn
 汶	mna
 懑	mnai
@@ -8222,11 +8224,10 @@ sort: by_weight
 们	mnioia
 钔	mniooi
 扪	mniuoi
-门	mno
+焖	mno
 闷	mnoi
 门	mnoiaa
 闷	mnoioa
-焖	mnou
 焖	mnouoi
 末	mo
 漠	moa
@@ -12727,12 +12728,14 @@ sort: by_weight
 咡	vuoe
 呒	vuoeeu
 咡	vuoeii
-尔	vuu
-迩	vuua
+儿	vuu
+尔	vuua
+儿	vuuaaa
 饵	vuuae
 饵	vuuaei
 鲕	vuuaeu
 尔	vuuaiu
+迩	vuuao
 迩	vuuaoa
 诶	vw
 诶	vwoaao
