更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -5365,6 +5365,7 @@ sort: by_weight
 不厌	buyje
 不要	buyk
 补药	buyko
+不用	buyl
 补养	buyp
 不扬	buype
 部优	buyr
@@ -6472,16 +6473,17 @@ sort: by_weight
 不在话下	bzhx
 摒住呼吸	bzhxi
 白纸黑字	bzhz
-不自觉	bzj
 保证金	bzjb
 标准间	bzjf
 标准件	bzjfe
 不正经	bzjg
+不自觉	bzjh
 不着急	bzji
 别着急	bzjio
 不知就里	bzjl
 标准键盘	bzjp
 避重就轻	bzjq
+不自觉	bzjz
 败者寇	bzk
 本专科	bzke
 不置可否	bzkf
@@ -17771,7 +17773,7 @@ sort: by_weight
 代人受过	drsg
 电热水壶	drsh
 夺人所好	drshe
-都市	drsi
+都是	drsi
 陡势	drsia
 逗死	drsie
 斗士	drsio
@@ -18546,13 +18548,14 @@ sort: by_weight
 堵塞	duse
 毒蛇	dusee
 毒舌	duseeu
-毒死	dusi
+都市	dusi
 毒誓	dusie
+毒死	dusiee
 督师	dusii
 读诗	dusio
 读史	dusioi
-笃实	dusiu
-独食	dusiui
+独食	dusiu
+笃实	dusiuo
 读诵	dusl
 独生	dusm
 赌圣	dusma
@@ -25557,8 +25560,8 @@ sort: by_weight
 公公	glglu
 躬耕	glgm
 功过	glgo
-怪里怪气	glgq
 改来改去	glgqa
+怪里怪气	glgqo
 公狗	glgr
 灌篮高手	glgs
 攻关	glgt
@@ -28742,7 +28745,7 @@ sort: by_weight
 合并单元格	hbdg
 荷包蛋	hbdj
 黑白电视机	hbdji
-好逼都让狗艹了	hbdl
+好逼都让狗艹了	hbdla
 黑白电视	hbds
 祸不单行	hbdx
 河北大学	hbdxa
@@ -30882,7 +30885,8 @@ sort: by_weight
 豪言	hkyj
 好言	hkyja
 黑框眼镜	hkyji
-耗用	hkyl
+好用	hkyl
+耗用	hkyle
 好样	hkyp
 耗氧	hkype
 好友	hkyr
@@ -36406,6 +36410,7 @@ sort: by_weight
 捡到	jfdki
 尖刀	jfdkia
 剑道	jfdkio
+键道	jfdkio
 剪刀	jfdko
 箭道	jfdku
 渐冻	jfdl
@@ -48907,8 +48912,8 @@ sort: by_weight
 落脚	lojd
 罗京	lojg
 逻辑	loji
+洛基	lojia
 罗技	lojii
-落基	lojiie
 裸机	lojio
 落价	lojs
 螺距	loju
@@ -49664,6 +49669,7 @@ sort: by_weight
 牢骚满腹	lsmf
 了什么呢	lsmn
 罗生门	lsmni
+零声母	lsmu
 历史命运	lsmy
 六十年代	lsnd
 拉氏逆变换	lsnh
@@ -50816,7 +50822,7 @@ sort: by_weight
 蓝牙鼠标	lysb
 赖以生存	lysc
 旅游胜地	lysd
-路易斯威登	lysdo
+路易斯威登	lysdoo
 李约瑟	lyse
 老于世故	lysg
 刘易斯	lysi
@@ -54155,7 +54161,7 @@ sort: by_weight
 没头没脑	mtmn
 闷头闷脑	mtmno
 秒天秒地秒空气	mtmq
-没图你说个鸡巴	mtnb
+没图你说个鸡巴	mtnba
 明天你好	mtnh
 蒙太奇	mtq
 没听清	mtqg
@@ -54163,7 +54169,7 @@ sort: by_weight
 门庭若市	mtrs
 没听说	mts
 摸头杀	mtsa
-没图说个鸡巴	mtsb
+没图说个鸡巴	mtsba
 没听说过	mtsg
 没图说个	mtsga
 慢条斯理	mtsl
@@ -56249,7 +56255,8 @@ sort: by_weight
 你给	nigw
 你还	nihh
 腻害	nihhu
-泥嚎	nihk
+你好	nihk
+泥嚎	nihka
 霓虹	nihl
 你狠	nihn
 逆火	niho
@@ -57400,8 +57407,8 @@ sort: by_weight
 你他妈	ntm
 你他妈的	ntmd
 你特么的	ntmdi
-牛头马面	ntmm
-你他妈的在逗我	ntmw
+牛头马面	ntmmu
+你他妈的在逗我	ntmwi
 暖男	ntnj
 暖暖	ntnt
 暖瓶	ntpg
@@ -75515,11 +75522,11 @@ sort: by_weight
 少而精	svj
 税金	svjb
 谁将	svjc
-谁叫	svjd
+睡觉	svjd
 水饺	svjda
-碎叫	svjde
-碎觉	svjdeo
-睡觉	svjdi
+碎觉	svjde
+碎叫	svjdeo
+谁叫	svjdo
 水晶	svjg
 水井	svjga
 水经	svjgaa
@@ -96267,6 +96274,7 @@ sort: by_weight
 一概而论	ygvl
 鱼贯而入	ygvr
 婴儿	ygvu
+颖儿	ygvuu
 央广网	ygw
 有关文件	ygwj
 忧国忘家	ygwjo
@@ -103849,6 +103857,7 @@ sort: by_weight
 孕婴	yyygaa
 又有一个	yyygae
 云影	yyyge
+嘤嘤嘤	yyygo
 有意义	yyyi
 游泳衣	yyyia
 云翳	yyyie
