更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -79320,12 +79320,12 @@ sort: by_weight
 童音	tlyboo
 同业	tlye
 同月	tlyh
-统一	tlyi
-通译	tlyia
+同意	tlyi
+统一	tlyia
 陀螺仪	tlyiai
-同一	tlyii
-同义	tlyiio
-同意	tlyiio
+通译	tlyiao
+同义	tlyii
+同一	tlyiie
 童颜	tlyj
 童言	tlyjo
 童谣	tlyk
