更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -54,6 +54,7 @@ sort: by_weight
 羓	baouai
 粑	baouai
 叭	baouoo
+八	bau
 爸	bau
 鲅	baua
 鲃	bauaa
@@ -68,6 +69,7 @@ sort: by_weight
 魃	baui
 魃	bauieu
 爸	bauoai
+八	bauooo
 宾	bb
 滨	bba
 缤	bbaa
@@ -1930,9 +1932,11 @@ sort: by_weight
 答	daueie
 笪	daueoi
 掉	dd
+刁	dda
 屌	dda
 汈	ddaa
 汈	ddaaee
+刁	ddaeee
 屌	ddaeoi
 碉	dde
 碉	ddeuua
@@ -2107,9 +2111,11 @@ sort: by_weight
 岱	dhieia
 黛	dhieia
 袋	dhieoe
-诒	dho
+呆	dho
+诒	dhoa
 诒	dhoaao
 呔	dhoe
+呆	dhoeee
 呔	dhoeuo
 待	dhu
 戴	dhuo
@@ -2279,8 +2285,10 @@ sort: by_weight
 膻	djuoei
 胆	djuoie
 到	dk
-导	dka
+刀	dka
+导	dkae
 导	dkaeei
+刀	dkauuu
 焘	dke
 到	dkeaii
 纛	dkee
@@ -5516,7 +5524,7 @@ sort: by_weight
 颎	jluaeu
 䐃	jlui
 䐃	jluiau
-究	jq
+久	jq
 酒	jqa
 纠	jqaa
 纠	jqaaai
@@ -5545,7 +5553,7 @@ sort: by_weight
 旧	jqioii
 揪	jqiu
 揪	jqiuue
-啾	jqo
+究	jqo
 疚	jqoe
 就	jqoeeu
 鹫	jqoeu
@@ -5554,9 +5562,11 @@ sort: by_weight
 阄	jqoi
 阄	jqoiua
 究	jqooua
+啾	jqou
 啾	jqouei
-久	jqu
+九	jqu
 咎	jqua
+九	jquaaa
 灸	jquao
 久	jquaoo
 咎	jquaoo
@@ -6542,6 +6552,8 @@ sort: by_weight
 苦	kuiiuo
 哭	kuo
 裤	kuoa
+袴	kuoae
+袴	kuoaeu
 裤	kuoaoe
 库	kuoe
 库	kuoeea
@@ -7035,17 +7047,18 @@ sort: by_weight
 徕	lhuu
 徕	lhuueo
 里	li
-隶	lia
-蠡	liaa
-骊	liaae
+力	lia
+骊	liaa
 骊	liaaei
+蠡	liaai
 蠡	liaaia
 缡	liaao
 缡	liaaoe
-沥	liae
+隶	liae
 隶	liaeei
 溧	liaei
 溧	liaeia
+沥	liaeu
 沥	liaeua
 澧	liai
 浬	liaia
@@ -7057,6 +7070,7 @@ sort: by_weight
 浰	liaue
 浰	liauei
 娌	liauia
+力	liauuu
 理	lie
 李	liea
 李	lieaie
@@ -8469,6 +8483,8 @@ sort: by_weight
 每	mwueaa
 魅	mwuiee
 灭	mx
+乜	mxa
+乜	mxaaaa
 灭	mxeoui
 蔑	mxi
 蠛	mxia
@@ -8820,6 +8836,8 @@ sort: by_weight
 馁	nwuauo
 摄	nx
 涅	nxa
+乜	nxaa
+乜	nxaaaa
 陧	nxai
 陧	nxaioi
 涅	nxaoie
@@ -9210,14 +9228,14 @@ sort: by_weight
 狍	pkuaua
 脬	pkuu
 脬	pkuuoo
-彭	pm
+碰	pm
 澎	pma
 泙	pmae
 澎	pmaeoo
 泙	pmaeou
 弸	pmaeu
 弸	pmaeuu
-碰	pme
+彭	pme
 堋	pmeo
 椪	pmeou
 椪	pmeoue
@@ -9248,12 +9266,14 @@ sort: by_weight
 嘭	pmoeoo
 怦	pmoo
 怦	pmooeo
-鹏	pmu
+朋	pmu
 膨	pmue
 膨	pmueoo
 篷	pmueu
 篷	pmueua
+鹏	pmuu
 鹏	pmuuua
+朋	pmuuuu
 喷	pn
 湓	pna
 湓	pnauoa
@@ -10125,6 +10145,8 @@ sort: by_weight
 娶	quei
 取	queiao
 娶	queiau
+麴	queiu
+麴	queiua
 趣	queo
 去	queoao
 趣	queoei
@@ -10207,6 +10229,8 @@ sort: by_weight
 娶	qvei
 取	qveiao
 娶	qveiau
+麴	qveiu
+麴	qveiua
 趣	qveo
 去	qveoao
 趣	qveoei
@@ -10560,8 +10584,10 @@ sort: by_weight
 褥	ruoaeu
 嚅	ruoe
 嚅	ruoeoa
-乳	ruu
+入	ruu
+乳	ruuo
 乳	ruuoaa
+入	ruuooo
 瑞	rv
 汭	rva
 汭	rvaiau
@@ -13844,11 +13870,13 @@ sort: by_weight
 琇	xqeeue
 髹	xqei
 髹	xqeiie
-岫	xqi
-䗛	xqia
+休	xqi
+岫	xqia
+䗛	xqiai
 岫	xqiaia
 䗛	xqiaii
 鸺	xqie
+休	xqieee
 鸺	xqieua
 脩	xqii
 修	xqiiua
@@ -16326,7 +16354,8 @@ sort: by_weight
 蛭	ziiaea
 峙	ziiaeo
 畤	ziiaeo
-仔	ziiai
+ㄓ	ziiai
+ㄓ	ziiaie
 仔	ziiaie
 眦	ziiaie
 帜	ziiao
