更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -48350,8 +48350,8 @@ sort: by_weight
 流口水	lks
 老舍	lkse
 老帅	lksg
-老师	lksi
-老是	lksiu
+老是	lksi
+老师	lksiu
 老湿	lksiua
 老式	lksiue
 老死	lksiue
@@ -91087,6 +91087,7 @@ sort: by_weight
 心理描写	xlmx
 小龙女	xln
 凶年	xlnf
+凶你	xlni
 心理年龄	xlnl
 匈奴	xlnu
 小老婆	xlp
