--- a/rime/xkydyw.dict.yaml
+++ b/rime/xkydyw.dict.yaml
@@ -3,6 +3,65 @@ name: xkydyw
 version: "Q1"
 sort: by_weight
 ...
+AA制	aaz
+ATM机	atmj
+AV女优	avny
+bilibili弹幕网	bbdw
 biangbiang面	bbmf
+B超	bcki
 B站	bzj
+打call	dcal
+哆啦A梦	dlam
+抖M	drm
+抖S	drsiu
+E迅速录机	exsj
+E迅速录	exsl
+E迅	exy
+疯狂打call	fkdc
+gay里gay气	glgq
+好B都让狗艹了	hbdl
+IP地址	ipdz
+卡拉OK	klok
+裸眼3D	lysdo
+MicroSD卡	msdki
+没图你说个JB	mtnb
+没图说个JB	mtsb
+你他妈自己心里没点B数吗	ntmm
+你TM的在逗我	ntmw
+你自己心里没点B数吗	nzjm
+ofo小黄车	ofo
+OTG线	otgx
+out了	outl
+papi酱	ppjc
 PY交易	pyjy
+齐B小短裙	qbxq
+QQ表情	qqbq
+QQ等级	qqdjo
+QQ号	qqhko
+QQ号码	qqhm
+QQ会员	qqhyo
+QQ空间	qqkj
+QQ拼音	qqpyo
+QQ群	qqqy
+QQ输入法	qqsfo
+QQ五笔	qqwb
+QQ网吧	qqwbo
+QQ五笔输入法	qqwf
+QQ邮箱	qqyx
+QQ游戏	qqyx
+QQ音乐	qqyy
+SD卡	sdka
+TF卡	tfka
+腾讯QQ	txqqu
+T恤	txu
+U盘	upj
+up主	upz
+阿Q	vaq
+VR眼镜	vryj
+X光	xgcu
+X光片	xgpfu
+新技能get√	xjng
+1号店	yhdfi
+自己心里没点B数吗	zjxm
+智能ABC	znab
+真人CS	zrcs
