更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -48563,9 +48563,9 @@ sort: by_weight
 伦理片	llp
 龙袍	llpk
 拉了泡屎	llps
-李岚清	llq
+浏览器	llq
+李岚清	llqg
 隆起	llqi
-浏览器	llqia
 龙骑	llqie
 龙旗	llqieo
 朗朗乾坤	llqk
@@ -95327,7 +95327,7 @@ sort: by_weight
 一大口	ydkr
 阴道口	ydkra
 一定可以	ydky
-意大利	ydl
+有道理	ydl
 一定量	ydlc
 运动量	ydlce
 阅读量	ydlco
@@ -95336,7 +95336,7 @@ sort: by_weight
 遇到了	ydle
 赢得了	ydleo
 异地恋	ydlf
-有道理	ydli
+意大利	ydli
 硬道理	ydlie
 原动力	ydliee
 阅读理解	ydlj
