更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -5018,8 +5018,9 @@ sort: by_weight
 不轨	bugvee
 不给	bugw
 补给	bugwo
-不合	buhe
-不喝	buhee
+不和	buhe
+不合	buhee
+不喝	buheeo
 不含	buhj
 不好	buhk
 捕获	buho
@@ -5289,8 +5290,9 @@ sort: by_weight
 不忘	buwp
 不枉	buwpe
 布网	buwpei
-不无	buwu
-不误	buwue
+不污	buwu
+不无	buwue
+不误	buwueo
 部位	buww
 不畏	buwwe
 不惟	buwweo
@@ -97485,7 +97487,7 @@ sort: by_weight
 异色	yisea
 一甩	yisg
 义赛	yish
-意识	yisi
+意思	yisi
 已是	yisia
 已死	yisiae
 以示	yisiae
@@ -97510,7 +97512,7 @@ sort: by_weight
 遗事	yisiie
 抑是	yisiio
 遗失	yisiiu
-意思	yisio
+意识	yisio
 义士	yisioe
 议事	yisioe
 易事	yisioe
