--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -8232,7 +8232,6 @@ sort: by_weight
 艋	mmuua
 艋	mmuuai
 艨	mmuuii
-门	mn
 们	mn
 汶	mna
 懑	mnai
@@ -8245,10 +8244,11 @@ sort: by_weight
 们	mnioia
 钔	mniooi
 扪	mniuoi
-焖	mno
+门	mno
 闷	mnoi
 门	mnoiaa
 闷	mnoioa
+焖	mnou
 焖	mnouoi
 末	mo
 漠	moa
