更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -4744,6 +4744,90 @@ sort: by_weight
 上	i
 呇	ioaaoo
 就	j
+渣	ja
+溠	jaa
+渣	jaaeoi
+溠	jaaoue
+砸	jae
+札	jaea
+轧	jaeaa
+札	jaeaaa
+轧	jaeaaa
+楂	jaee
+楂	jaeeoi
+匝	jaei
+匝	jaeiai
+榨	jaeo
+查	jaeoi
+查	jaeoie
+霅	jaeoo
+榨	jaeooa
+霅	jaeooe
+栅	jaeu
+栅	jaeuau
+䃎	jaeue
+砸	jaeuei
+䃎	jaeueu
+砟	jaeuu
+砟	jaeuue
+扎	jai
+眨	jaia
+蚱	jaiau
+蚱	jaiaue
+眨	jaiauo
+铡	jaio
+铡	jaioao
+拶	jaiu
+拶	jaiuaa
+扎	jaiuaa
+揸	jaiue
+揸	jaiueo
+挓	jaiuo
+挓	jaiuoo
+拃	jaiuu
+拃	jaiuue
+炸	jao
+诈	jaoa
+诈	jaoaue
+喳	jaoe
+咂	jaoei
+咂	jaoeia
+喋	jaoeii
+喳	jaoeoi
+痄	jaoeu
+痄	jaoeue
+闸	jaoi
+闸	jaoiia
+哳	jaoiu
+哳	jaoiuu
+咤	jaoo
+咤	jaoooa
+怍	jaoou
+怍	jaooue
+咱	jaou
+咋	jaoue
+吒	jaouea
+咋	jaouei
+咱	jaouia
+鲝	jaouu
+鲝	jaouua
+炸	jaouue
+杂	jau
+鲊	jaua
+猹	jauae
+杂	jauaee
+猹	jauaeo
+鲊	jauaue
+乍	jaue
+劄	jauei
+乍	jaueie
+劄	jaueii
+齄	jaui
+齄	jauieo
+齇	jauii
+齇	jauiie
+臜	jauo
+臜	jauoue
 进	jb
 尽	jba
 津	jbaa
@@ -4982,6 +5066,86 @@ sort: by_weight
 教	jduoue
 徼	jduu
 徼	jduuui
+这	je
+则	jea
+泽	jeaa
+泽	jeaaoe
+浙	jeai
+浙	jeaiuu
+则	jeaoii
+责	jee
+辄	jeea
+辄	jeeaei
+辙	jeeao
+辙	jeeaoe
+柘	jeee
+责	jeeeao
+柘	jeeeuo
+赜	jeei
+赜	jeeiee
+赭	jeeo
+喆	jeeoe
+喆	jeeoeo
+赭	jeeouo
+仄	jeeu
+仄	jeeuii
+詟	jeeuo
+詟	jeeuoe
+磔	jeeuu
+磔	jeeuua
+择	jei
+帻	jeia
+帻	jeiaee
+蔗	jeii
+蔗	jeiioe
+锗	jeio
+锗	jeiouo
+折	jeiu
+摺	jeiua
+择	jeiuao
+摺	jeiuao
+蛰	jeiui
+蜇	jeiuia
+蛰	jeiuia
+哲	jeiuo
+晢	jeiuoi
+哲	jeiuoo
+折	jeiuuu
+着	jeo
+褚	jeoa
+褶	jeoaa
+褶	jeoaao
+谪	jeoao
+谪	jeoaoe
+褚	jeoauo
+遮	jeoe
+啧	jeoee
+啧	jeoeei
+䗪	jeoei
+䗪	jeoeia
+遮	jeoeoa
+这	jeoeoa
+鹧	jeoeu
+鹧	jeoeua
+昃	jeoi
+昃	jeoieu
+嘀	jeoo
+嘀	jeooeo
+咋	jeou
+咋	jeouei
+着	jeouia
+啫	jeouo
+啫	jeouoe
+者	jeu
+笮	jeue
+箦	jeuee
+箦	jeueee
+迮	jeueo
+迮	jeueoa
+笮	jeueue
+者	jeuooi
+舴	jeuu
+舴	jeuuue
 见	jf
 建	jfa
 缄	jfaa
@@ -5577,6 +5741,81 @@ sort: by_weight
 臼	jquie
 臼	jquiea
 舅	jquiia
+走	jr
+洲	jra
+骤	jraa
+纣	jraae
+纣	jraaei
+骤	jraaei
+驺	jraau
+绉	jraaua
+驺	jraaua
+昼	jrae
+帚	jraei
+帚	jraeia
+粥	jraeo
+昼	jraeoi
+粥	jraeou
+陬	jrai
+陬	jraiei
+赒	jrao
+赒	jraoua
+洲	jraouo
+妯	jrau
+妯	jrauia
+婤	jrauu
+婤	jrauua
+奏	jre
+轴	jrea
+轴	jreaia
+辀	jreau
+辀	jreauu
+奏	jreeee
+鄹	jrei
+鄹	jreiai
+酎	jreie
+酎	jreiei
+走	jreoie
+碡	jreu
+碡	jreuee
+胄	jri
+胄	jriauu
+荮	jrii
+荮	jriiaa
+揍	jriu
+㑇	jriua
+㑇	jriuaa
+揍	jriuee
+州	jro
+诹	jroa
+诹	jroaei
+诌	jroau
+诌	jroaua
+宙	jroo
+宙	jrooia
+咒	jroou
+咒	jrooua
+啁	jrou
+啁	jrouae
+州	jrouoi
+周	jru
+皱	jrua
+邹	jruaa
+邹	jruaai
+皱	jruaau
+鲰	jruae
+鲰	jruaei
+周	jruaeo
+肘	jrue
+籀	jruei
+肘	jrueio
+籀	jrueiu
+繇	jruo
+繇	jruoua
+舟	jruu
+舟	jruuao
+鸼	jruuu
+鸼	jruuua
 家	js
 加	jsa
 泇	jsaa
@@ -5967,6 +6206,10 @@ sort: by_weight
 犋	jvueia
 筥	jvueo
 筥	jvueoo
+贼	jw
+贼	jwaoee
+鲗	jwu
+鲗	jwuaao
 解	jx
 结	jxa
 结	jxaaeo
