更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -111143,9 +111143,8 @@ sort: by_weight
 整层	zmcme
 怎么才能	zmcn
 征尘	zmcnu
-增长	zmcp
-正常	zmcpe
-整场	zmcpee
+正常	zmcp
+整场	zmcpe
 捉迷藏	zmcpi
 正愁	zmcr
 正处	zmcu
@@ -111742,7 +111741,8 @@ sort: by_weight
 这么做	zmzo
 整座	zmzoe
 争做	zmzou
-证章	zmzp
+增长	zmzp
+证章	zmzpo
 郑州	zmzr
 中美洲	zmzri
 在某种程度上	zmzs
