更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -14810,6 +14810,68 @@ sort: by_weight
 氤	ybueia
 殷	ybuu
 殷	ybuuua
+样	yc
+阳	yca
+泱	ycai
+泱	ycaiae
+阳	ycaioi
+洋	ycao
+漾	ycaou
+洋	ycaoue
+漾	ycaoue
+杨	yce
+杨	yceauu
+鞅	ycei
+鞅	yceiia
+垟	yceo
+垟	yceoou
+样	yceoue
+殃	yceu
+殃	yceuia
+央	yci
+鸯	ycia
+央	yciaeu
+蛘	yciao
+蛘	yciaou
+鸯	yciaua
+佯	ycio
+钖	ycioa
+钖	ycioau
+佯	ycioue
+扬	yciu
+仰	yciua
+仰	yciuaa
+扬	yciuau
+养	yco
+痒	ycoe
+疡	ycoea
+疡	ycoeau
+痒	ycoeou
+咉	ycoi
+旸	ycoia
+咉	ycoiae
+旸	ycoiau
+怏	ycoo
+怏	ycooia
+羊	ycou
+炀	ycoua
+炀	ycouau
+羊	ycouee
+恙	ycouo
+恙	ycouoa
+羕	ycouoa
+烊	ycouou
+养	ycouui
+氧	ycu
+飏	ycua
+卬	ycuaa
+卬	ycuaai
+飏	ycuaau
+秧	ycue
+秧	ycueia
+氧	ycueou
+徉	ycuu
+徉	ycuuou
 也	ye
 液	yea
 也	yeaiaa
