更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -18995,7 +18995,8 @@ sort: by_weight
 堆满	dvmj
 对门	dvmn
 地安门	dvmne
-怼你	dvni
+对你	dvni
+怼你	dvnia
 对内	dvnw
 队内	dvnwa
 当耳旁风	dvpf
@@ -36394,9 +36395,9 @@ sort: by_weight
 胶合	jdhe
 机顶盒	jdhee
 交合	jdheo
-脚踝	jdhg
+教坏	jdhg
 较坏	jdhge
-教坏	jdhgu
+脚踝	jdhgu
 交还	jdhh
 叫喊	jdhj
 娇憨	jdhja
@@ -89667,7 +89668,8 @@ sort: by_weight
 相克	xcke
 香客	xckeu
 想开	xckh
-相看	xckj
+想看	xckj
+相看	xckje
 相扣	xckr
 巷口	xckre
 箱口	xckru
@@ -90965,11 +90967,11 @@ sort: by_weight
 先遣	xfqfu
 险情	xfqg
 闲情	xfqgo
-掀起	xfqi
-嫌弃	xfqia
-限期	xfqiae
+嫌弃	xfqi
+限期	xfqia
 现期	xfqie
-贤妻	xfqii
+掀起	xfqii
+贤妻	xfqiie
 仙气	xfqiiu
 闲气	xfqio
 先期	xfqiu
