--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -14461,7 +14461,7 @@ sort: by_weight
 媭	xvuuau
 须	xvuueu
 徐	xvuuie
-些	xx
+写	xx
 泄	xxa
 缬	xxaa
 绁	xxaae
@@ -14499,7 +14499,7 @@ sort: by_weight
 颉	xxeoeu
 榭	xxeu
 榭	xxeuia
-携	xxi
+些	xxi
 蝎	xxia
 蝎	xxiaoi
 斜	xxie
@@ -14514,15 +14514,14 @@ sort: by_weight
 薤	xxiieu
 薢	xxiiu
 薢	xxiiua
-挟	xxiu
-撷	xxiue
+携	xxiu
+挟	xxiue
 揳	xxiuee
 挟	xxiueo
 撷	xxiueo
 携	xxiuio
-写	xxo
-谢	xxoa
-谐	xxoae
+谢	xxo
+谐	xxoa
 谐	xxoaea
 写	xxoaea
 谢	xxoaui
