更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -181,13 +181,15 @@ sort: by_weight
 巴掌	bazp
 霸主	bazu
 吧主	bazuo
-并不比	bbb
+不不不	bbb
 彬彬	bbbb
 不包不刀	bbbd
+并不比	bbbi
 不卑不亢	bbbk
-斑驳不堪	bbbke
-本宝宝	bbbkeo
+本宝宝	bbbke
+斑驳不堪	bbbkea
 并不表示	bbbs
+别别别	bbbx
 褒贬不一	bbby
 办不成	bbc
 滨城	bbcm
@@ -49803,10 +49805,11 @@ sort: by_weight
 老两口	llkru
 寥寥可数	llks
 历历可数	llkse
-狼来了	lll
+来来来	lll
 龙鳞	lllb
 浏览量	lllc
 蓝绿两厂	lllci
+狼来了	llle
 理论联系实际	lllj
 刘姥姥	lllk
 隆隆	llll
