更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -10221,6 +10221,36 @@ sort: by_weight
 耆	qiuooi
 颀	qiuu
 颀	qiuueu
+且	qk
+切	qke
+切	qkeaau
+挈	qkee
+挈	qkeeiu
+趄	qkeo
+趄	qkeoia
+砌	qkeu
+砌	qkeuea
+茄	qki
+伽	qkia
+且	qkiaee
+伽	qkiauo
+茄	qkiiau
+锲	qkio
+锲	qkioee
+窃	qko
+妾	qkoe
+妾	qkoeau
+怯	qkoo
+惬	qkooe
+窃	qkooea
+惬	qkooee
+怯	qkooeo
+箧	qku
+箧	qkueee
+癿	qkui
+癿	qkuiaa
+郄	qkuo
+郄	qkuoai
 穷	ql
 嬛	qla
 嬛	qlauia
@@ -14086,6 +14116,100 @@ sort: by_weight
 徙	xiuuie
 肸	xiuuo
 肸	xiuuou
+写	xk
+泄	xka
+缬	xkaa
+绁	xkaae
+绁	xkaaei
+缬	xkaaeo
+屑	xkae
+渫	xkaei
+泄	xkaeii
+渫	xkaeii
+屑	xkaeio
+瀣	xkai
+瀣	xkaieu
+泻	xkao
+泻	xkaoae
+勰	xkau
+澥	xkaua
+澥	xkauau
+勰	xkauia
+邪	xke
+榍	xkea
+邪	xkeaai
+榍	xkeaeu
+契	xkee
+絜	xkeea
+絜	xkeeaa
+械	xkeee
+楔	xkeeee
+契	xkeeeu
+械	xkeeeu
+鞋	xkei
+鞋	xkeieo
+颉	xkeo
+颉	xkeoeu
+榭	xkeu
+榭	xkeuia
+些	xki
+蝎	xkia
+蝎	xkiaoi
+斜	xkie
+偕	xkiea
+偕	xkieau
+偰	xkiee
+些	xkieee
+偰	xkieei
+㙦	xkieeo
+斜	xkieoo
+薤	xkii
+薤	xkiieu
+薢	xkiiu
+薢	xkiiua
+携	xkiu
+挟	xkiue
+揳	xkiuee
+挟	xkiueo
+撷	xkiueo
+携	xkiuio
+谢	xko
+谐	xkoa
+谐	xkoaea
+写	xkoaea
+谢	xkoaui
+亵	xkoe
+燮	xkoea
+燮	xkoeao
+亵	xkoeiu
+廨	xkoeu
+廨	xkoeua
+歇	xkoi
+躞	xkoio
+躞	xkoioe
+歇	xkoiua
+懈	xkoo
+懈	xkooua
+叶	xkou
+叶	xkouoo
+解	xku
+胁	xkua
+解	xkuaau
+鲑	xkuae
+鲑	xkuaeo
+蟹	xkuai
+蟹	xkuaia
+邂	xkuao
+邂	xkuaoa
+獬	xkuau
+獬	xkuaua
+胁	xkuauo
+卸	xkue
+卸	xkueai
+血	xkui
+血	xkuiai
+协	xkuo
+协	xkuoau
 兄	xl
 熊	xla
 熊	xlaooo
