更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -5816,16 +5816,15 @@ sort: by_weight
 舟	jruuao
 鸼	jruuu
 鸼	jruuua
-家	js
-加	jsa
+加	js
+架	jsa
 泇	jsaa
 泇	jsaauo
 浃	jsae
 叚	jsaei
 叚	jsaeie
 浃	jsaeou
-架	jsau
-驾	jsaua
+驾	jsau
 驾	jsauaa
 架	jsauee
 嫁	jsauo
@@ -5883,8 +5882,9 @@ sort: by_weight
 拮	jsiue
 挟	jsiueo
 拮	jsiueo
-咖	jso
-袷	jsoa
+家	jso
+咖	jsoa
+袷	jsoai
 袷	jsoaie
 咖	jsoauo
 痂	jsoe
