更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -18197,7 +18197,7 @@ sort: by_weight
 第四官员	dsgy
 单身贵族	dsgz
 电视观众	dsgzi
-的时候	dsh
+到时候	dsh
 代数和	dshe
 刀山火海	dshh
 单身汉	dshj
@@ -18205,7 +18205,7 @@ sort: by_weight
 箪食壶浆	dshju
 的时候呢	dshn
 的生活	dsho
-到时候	dshr
+的时候	dshr
 到时候再说	dshs
 淡水湖	dshu
 的社会	dshv
