更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -17363,14 +17363,15 @@ sort: by_weight
 佐	zoieu
 佐	zoieue
 卓	zoieuo
+坐	zoii
 茁	zoiia
 茁	zoiiai
 倬	zoiie
 倬	zoiieo
 坐	zoiieo
+坐	zoiioi
 著	zoiiu
 著	zoiiuo
-坐	zoiizoi
 镯	zoio
 䦃	zoioi
 镯	zoioia
@@ -17385,7 +17386,6 @@ sort: by_weight
 撮	zoiuoi
 捉	zoiuoi
 做	zoiuoo
-着	zoo
 座	zoo
 祚	zooa
 诼	zooae
@@ -17406,10 +17406,11 @@ sort: by_weight
 嘬	zoooi
 嘬	zoooie
 怍	zoooue
-灼	zoou
+着	zoou
 焯	zooui
 着	zoouia
 焯	zoouie
+灼	zoouu
 灼	zoouua
 笮	zou
 笮	zoueue
