更新：备份旧词库

--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -697,6 +697,42 @@ sort: by_weight
 𠳐	bpoeeu
 膀	bpu
 膀	bpuoeo
+帮	bs
+绑	bsa
+绑	bsaaee
+浜	bsau
+浜	bsauie
+棒	bse
+邦	bsee
+邦	bseeai
+梆	bseeee
+玤	bseeee
+棒	bseeee
+帮	bseeia
+榜	bseo
+棓	bseoe
+榜	bseoeo
+棓	bseoeo
+塝	bseoo
+塝	bseooe
+彭	bseou
+彭	bseouu
+磅	bseu
+磅	bseuoe
+傍	bsi
+蚌	bsia
+蚌	bsiaee
+蒡	bsii
+蒡	bsiioe
+镑	bsio
+傍	bsioeo
+镑	bsiooe
+搒	bsiu
+搒	bsiuoe
+谤	bso
+谤	bsoaoe
+膀	bsu
+膀	bsuoeo
 部	bu
 埔	bue
 逋	buei
@@ -6768,13 +6804,37 @@ sort: by_weight
 夸	kse
 垮	kseo
 垮	kseoeu
+𡐓	kseoo
+𡐓	kseooe
 夸	kseuee
 挎	ksi
 侉	ksie
 侉	ksieuo
+抗	ksio
+伉	ksioe
+伉	ksioeu
+钪	ksioo
+钪	ksiooe
+扛	ksiu
+扛	ksiuei
 挎	ksiueu
+抗	ksiuoe
+康	kso
+亢	ksoe
+康	ksoeae
+亢	ksoeua
+闶	ksoi
 跨	ksoieu
+闶	ksoioe
+慷	ksoo
+慷	ksoooe
+炕	ksou
+糠	ksouo
+糠	ksouoe
+炕	ksouoe
 胯	ksu
+𩾌	ksua
+𩾌	ksuaoe
 胯	ksueuo
 款	kt
 款	kteoua
@@ -7793,7 +7853,54 @@ sort: by_weight
 篓	lru
 篓	lrueou
 俩	ls
+俩	ls
+浪	lsa
+浪	lsaoae
+琅	lse
+琅	lseeoa
+榔	lseo
+桹	lseoa
+桹	lseoae
+榔	lseoae
+埌	lseoo
+埌	lseooa
+螂	lsi
+崀	lsia
+螂	lsiaoa
+崀	lsiaoa
 俩	lsieia
+俩	lsieia
+莨	lsii
+蒗	lsiia
+蒗	lsiiao
+蓢	lsiio
+蓢	lsiioa
+莨	lsiioa
+锒	lsio
+锒	lsiooa
+郎	lso
+朗	lsoa
+郎	lsoaai
+㮾	lsoae
+㮾	lsoaee
+塱	lsoaeo
+朗	lsoauu
+廊	lsoe
+廊	lsoeoa
+阆	lsoi
+㫰	lsoio
+阆	lsoioa
+㫰	lsoioa
+啷	lsoo
+啷	lsooae
+烺	lsou
+烺	lsouoa
+狼	lsu
+狼	lsuaoa
+稂	lsue
+筤	lsueo
+稂	lsueoa
+筤	lsueoa
 乱	lt
 滦	lta
 滦	ltaoei
@@ -8620,6 +8727,34 @@ sort: by_weight
 哞	mroa
 谋	mroaei
 哞	mroaou
+忙	ms
+漭	msa
+漭	msaiie
+硭	mse
+杧	mseo
+杧	mseoea
+厖	mseu
+厖	mseueu
+硭	mseuii
+茫	msi
+蟒	msia
+蟒	msiaii
+莽	msii
+茫	msiiao
+莽	msiieu
+芒	msiio
+芒	msiioe
+盲	mso
+氓	msoe
+邙	msoea
+氓	msoeae
+邙	msoeai
+盲	msoeia
+忙	msoooe
+牻	msu
+牤	msue
+牻	msueeu
+牤	msueoe
 目	mu
 母	mua
 母	muaaoe
@@ -9612,6 +9747,32 @@ sort: by_weight
 裒	pro
 剖	proeii
 裒	proeui
+旁	ps
+滂	psa
+滂	psaoeo
+磅	pse
+耪	psee
+耪	pseeoe
+雱	psei
+雱	pseioe
+磅	pseuoe
+螃	psi
+螃	psiaoe
+庞	pso
+庞	psoeeu
+旁	psoeoe
+胖	psu
+逄	psua
+鳑	psuao
+逄	psuaoa
+鳑	psuaoe
+乓	psui
+乓	psuioo
+膀	psuo
+膀	psuoeo
+胖	psuoue
+彷	psuu
+彷	psuuoe
 普	pu
 浦	pua
 溥	puae
@@ -14933,68 +15094,6 @@ sort: by_weight
 氤	ybueia
 殷	ybuu
 殷	ybuuua
-样	yc
-阳	yca
-泱	ycai
-泱	ycaiae
-阳	ycaioi
-洋	ycao
-漾	ycaou
-洋	ycaoue
-漾	ycaoue
-杨	yce
-杨	yceauu
-鞅	ycei
-鞅	yceiia
-垟	yceo
-垟	yceoou
-样	yceoue
-殃	yceu
-殃	yceuia
-央	yci
-鸯	ycia
-央	yciaeu
-蛘	yciao
-蛘	yciaou
-鸯	yciaua
-佯	ycio
-钖	ycioa
-钖	ycioau
-佯	ycioue
-扬	yciu
-仰	yciua
-仰	yciuaa
-扬	yciuau
-养	yco
-痒	ycoe
-疡	ycoea
-疡	ycoeau
-痒	ycoeou
-咉	ycoi
-旸	ycoia
-咉	ycoiae
-旸	ycoiau
-怏	ycoo
-怏	ycooia
-羊	ycou
-炀	ycoua
-炀	ycouau
-羊	ycouee
-恙	ycouo
-恙	ycouoa
-羕	ycouoa
-烊	ycouou
-养	ycouui
-氧	ycu
-飏	ycua
-卬	ycuaa
-卬	ycuaai
-飏	ycuaau
-秧	ycue
-秧	ycueia
-氧	ycueou
-徉	ycuu
-徉	ycuuou
 也	ye
 液	yea
 也	yeaiaa
@@ -15858,6 +15957,68 @@ sort: by_weight
 釉	yruoia
 繇	yruou
 繇	yruoua
+样	ys
+阳	ysa
+泱	ysai
+泱	ysaiae
+阳	ysaioi
+洋	ysao
+漾	ysaou
+洋	ysaoue
+漾	ysaoue
+杨	yse
+杨	yseauu
+鞅	ysei
+鞅	yseiia
+垟	yseo
+垟	yseoou
+样	yseoue
+殃	yseu
+殃	yseuia
+央	ysi
+鸯	ysia
+央	ysiaeu
+蛘	ysiao
+蛘	ysiaou
+鸯	ysiaua
+佯	ysio
+钖	ysioa
+钖	ysioau
+佯	ysioue
+扬	ysiu
+仰	ysiua
+仰	ysiuaa
+扬	ysiuau
+养	yso
+痒	ysoe
+疡	ysoea
+疡	ysoeau
+痒	ysoeou
+咉	ysoi
+旸	ysoia
+咉	ysoiae
+旸	ysoiau
+怏	ysoo
+怏	ysooia
+羊	ysou
+炀	ysoua
+炀	ysouau
+羊	ysouee
+恙	ysouo
+恙	ysouoa
+羕	ysouoa
+烊	ysouou
+养	ysouui
+氧	ysu
+飏	ysua
+卬	ysuaa
+卬	ysuaai
+飏	ysuaau
+秧	ysue
+秧	ysueia
+氧	ysueou
+徉	ysuu
+徉	ysuuou
 原	yt
 院	yta
 缘	ytaa
