更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -347,6 +347,7 @@ sort: by_weight
 不必要的	bbyde
 殡仪	bbyi
 彬彬有礼	bbyl
+北冰洋	bbyp
 不包邮	bbyr
 北冰洋	bbys
 濒于	bbyu
@@ -3799,6 +3800,7 @@ sort: by_weight
 毕了业	blye
 保留意见	blyj
 本来已经	blyje
+变了样	blyp
 变了样	blys
 不利因素	blys
 白鹿原	blyt
@@ -6452,6 +6454,7 @@ sort: by_weight
 不用了	byle
 不要了	bylee
 不亦乐乎	bylh
+白眼狼	bylp
 白眼狼	byls
 柏油路	bylu
 毕业论文	bylw
@@ -6559,6 +6562,7 @@ sort: by_weight
 不遗余力	byyl
 编译原理	byyla
 不一样了	byyle
+不一样	byyp
 必有一失	byys
 不一样	byys
 播音员	byyt
@@ -6814,6 +6818,8 @@ sort: by_weight
 鼻子眼	bzyju
 不重要	bzyk
 不中用	bzyl
+别这样	bzyp
+不这样	bzype
 本质要求	bzyq
 别这样	bzys
 不自由毋宁死	bzys
@@ -9707,6 +9713,7 @@ sort: by_weight
 充满	clmj
 冲模	clmo
 匆忙	clmp
+臭流氓	clmpu
 匆忙	clms
 臭流氓	clmsu
 从没	clmw
@@ -11722,6 +11729,7 @@ sort: by_weight
 传言	ctyj
 船沿	ctyju
 传扬	ctyp
+出太阳	ctypa
 串通一气	ctyq
 传扬	ctys
 长叹一声	ctys
@@ -15438,6 +15446,7 @@ sort: by_weight
 代劳	dhlk
 大汗淋漓	dhll
 呆愣	dhlm
+大灰狼	dhlp
 丢魂落魄	dhlpu
 大灰狼	dhls
 调虎离山	dhls
@@ -17250,6 +17259,7 @@ sort: by_weight
 登报	dmbk
 独木不成林	dmbl
 大门不出二门不迈	dmbm
+逗猫棒	dmbp
 的目标是	dmbs
 逗猫棒	dmbs
 蹬被	dmbw
@@ -17436,6 +17446,7 @@ sort: by_weight
 等腰	dmyk
 都没有了	dmyl
 都没有什么	dmym
+的模样	dmyp
 灯油	dmyr
 但没有	dmyri
 都没有	dmyru
@@ -17538,6 +17549,8 @@ sort: by_weight
 多年以后	dnyh
 打那以后	dnyhi
 多年以来	dnyl
+的那样	dnyp
+的那样	dnyp北冰洋	bbyp
 多年以前	dnyq
 的那样	dnys
 电脑游戏	dnyx
@@ -19816,6 +19829,7 @@ sort: by_weight
 对于一个	dyyga
 的意义	dyyi
 打印预览	dyyl
+都一样	dyyp
 的原因是	dyys
 都一样	dyys
 大隐隐于市	dyyse
@@ -20068,6 +20082,8 @@ sort: by_weight
 瞪着眼睛	dzyjio
 当之有愧	dzyk
 独在异乡为异客	dzyku
+党中央	dzyp
+的这样	dzypu
 动之以情	dzyq
 独自一人	dzyr
 党中央	dzys
@@ -23392,6 +23408,7 @@ sort: by_weight
 肺泡	fwpku
 肥婆	fwpo
 肥胖	fwpp
+反文旁	fwppu
 肥胖	fwps
 反文旁	fwpsu
 飞瀑	fwpu
@@ -29241,6 +29258,7 @@ sort: by_weight
 更重要的	gzyd
 工作原理	gzyl
 公众舆论	gzylu
+该怎样	gzyp
 鼓足勇气	gzyq
 该怎样	gzys
 公诸于世	gzys
@@ -29441,6 +29459,7 @@ sort: by_weight
 后半叶	hbye
 含苞欲放	hbyf
 很必要	hbyk
+好榜样	hbyp
 毫不掩饰	hbys
 好榜样	hbys
 汉白玉	hbyu
@@ -30998,6 +31017,7 @@ sort: by_weight
 旱涝	hjlk
 寒冷	hjlm
 虎踞龙盘	hjlp
+黄俊郎	hjlpe
 寒流	hjlq
 韩流	hjlqu
 候机楼	hjlr
@@ -33595,6 +33615,7 @@ sort: by_weight
 欢乐	htle
 换了	htlei
 换来	htlh
+灰太狼	htlp
 环流	htlq
 灰太狼	htls
 回头路	htlu
@@ -34814,6 +34835,7 @@ sort: by_weight
 婚变	hybfa
 回音壁	hybi
 红颜薄命	hybm
+胡耀邦	hybp
 怀冤抱屈	hybq
 胡耀邦	hybs
 浑不	hybu
@@ -35238,6 +35260,7 @@ sort: by_weight
 红着眼睛	hzyj
 很重要	hzyk
 好这一口	hzyka
+会这样	hzyp
 合在一起	hzyq
 很早以前	hzyqu
 壕做友	hzyr
@@ -40450,6 +40473,7 @@ sort: by_weight
 加勒比	jlbi
 极乐宝鉴	jlbj
 记录本	jlbn
+接力棒	jlbp
 接力棒	jlbs
 焦虑不安	jlbv
 吉林长春	jlcc
@@ -40703,6 +40727,7 @@ sort: by_weight
 今年以来	jnyl
 九牛一毛	jnym
 纪念邮票	jnyp
+就那样	jnypo
 几内亚比绍	jnys
 就那样	jnyso
 九年义务	jnyw
@@ -41512,6 +41537,7 @@ sort: by_weight
 精神饱满	jsbmo
 记事本	jsbn
 甲苯	jsbni
+杰士邦	jsbp
 经受不起	jsbq
 精神病人	jsbr
 杰士邦	jsbs
@@ -41858,6 +41884,8 @@ sort: by_weight
 佳品	jspbi
 惊悚片	jspf
 加蓬	jspm
+金三胖	jspp
+绞丝旁	jsppa
 金三胖	jsps
 绞丝旁	jspsa
 家仆	jspu
@@ -44530,6 +44558,7 @@ sort: by_weight
 决一	jzyioe
 脊柱炎	jzyj
 就这样了	jzyl
+就这样	jzyp
 近在眼前	jzyq
 激浊扬清	jzyqa
 就这样	jzys
@@ -46198,6 +46227,7 @@ sort: by_weight
 开了眼界	klyje
 控烟	klyji
 看了又看	klyk
+可怜样	klyp
 克莱因瓶	klypu
 空有	klyr
 可怜样	klys
@@ -47631,6 +47661,7 @@ sort: by_weight
 里贝里	lbliia
 老爸老妈	lblm
 琳琅	lblp
+伦勃朗	lblpi
 琳琅	lbls
 伦勃朗	lblsi
 老八路	lblu
@@ -50451,6 +50482,7 @@ sort: by_weight
 路漫漫	lmmj
 冷门	lmmn
 冷漠	lmmo
+两茫茫	lmmp
 两茫茫	lmms
 冷梅	lmmw
 冷媒	lmmwo
@@ -52483,6 +52515,7 @@ sort: by_weight
 留言本	lybn
 李永波	lybo
 轮播	lyboe
+狼牙棒	lybp
 良莠不齐	lybq
 狼牙棒	lybs
 略有不同	lybt
@@ -56074,6 +56107,7 @@ sort: by_weight
 曼陀罗	mtl
 马蹄莲	mtlf
 摩托罗拉	mtll
+密特朗	mtlp
 密特朗	mtls
 蒙特利尔	mtlv
 摩天轮	mtly
@@ -57081,6 +57115,7 @@ sort: by_weight
 没意义	myyi
 没有意见	myyj
 没有用	myyl
+美羊羊	myyp
 没有勇气	myyq
 没有意思	myys
 美羊羊	myys
@@ -57581,6 +57616,7 @@ sort: by_weight
 那必须的	nbxd
 你不希望	nbxw
 努比亚	nby
+南冰洋	nbyp
 南冰洋	nbys
 你不也是	nbys
 那不一样	nbyy
@@ -59033,6 +59069,7 @@ sort: by_weight
 那么一	nmyia
 能言	nmyj
 脑膜炎	nmyju
+那么样	nmyp
 能有	nmyr
 那么样	nmys
 能源	nmyt
@@ -59937,6 +59974,7 @@ sort: by_weight
 你愿意	nyyi
 那样一	nyyia
 难以预料	nyyl
+挠痒痒	nyyp
 难以言说	nyys
 挠痒痒	nyys
 女演员	nyyt
@@ -72673,6 +72711,8 @@ sort: by_weight
 善本	sjbno
 散播	sjbo
 世界波	sjboe
+沙家浜	sjbp
+杀价帮	sjbpu
 沙家浜	sjbs
 杀价帮	sjbsu
 散步	sjbu
@@ -73575,6 +73615,7 @@ sort: by_weight
 上课铃	sklg
 少来	sklh
 捎来	sklhi
+屎壳郎	sklp
 屎壳郎	skls
 骚乱	sklt
 烧录	sklu
@@ -73864,6 +73905,7 @@ sort: by_weight
 数理逻辑	sllj
 斯里兰卡	sllk
 松萝	sllo
+森林狼	sllp
 酸溜溜	sllq
 森林狼	slls
 松露	sllu
@@ -73874,6 +73916,7 @@ sort: by_weight
 宋明	slmg
 松明	slmge
 送命	slmgo
+耍流氓	slmp
 耍流氓	slms
 松木	slmu
 睡了没	slmw
@@ -74561,6 +74604,7 @@ sort: by_weight
 什么也没	smym
 什么意思呢	smyn
 生养	smyp
+神马样	smypo
 生有	smyr
 声优	smyre
 省油	smyri
@@ -75088,6 +75132,7 @@ sort: by_weight
 神勇	snyl
 慎用	snylo
 沈阳	snyp
+是那样	snypo
 神游	snyr
 深有	snyra
 深幽	snyrai
@@ -78938,6 +78983,7 @@ sort: by_weight
 顺眼	syyj
 数以亿计	syyjo
 顺延	syyju
+是一样	syyp
 孙杨	syypa
 实验仪器	syyq
 损友	syyr
@@ -79235,6 +79281,8 @@ sort: by_weight
 受之有愧	szyk
 实战演练	szyl
 是这样吗	szym
+是这样	szyp
+是怎样	szypo
 受制于人	szyr
 始终有	szyra
 神最右	szyro
@@ -83826,6 +83874,7 @@ sort: by_weight
 投资银行	tzyh
 太重要	tzyk
 太重要了	tzyl
+团中央	tzyp
 躺着也中枪	tzyq
 团中央	tzys
 逃之夭夭	tzyy
@@ -86708,6 +86757,7 @@ sort: by_weight
 无愧于	wky
 我可以	wkyi
 网开一面	wkym
+胃溃疡	wkyp
 外科医生	wkys
 胃溃疡	wkys
 我可以说	wkysu
@@ -86918,6 +86968,7 @@ sort: by_weight
 误码率	wmlv
 雾蒙蒙	wmm
 未命名	wmmg
+雾茫茫	wmmp
 雾茫茫	wmms
 我们没有	wmmy
 武媚娘	wmn
@@ -95085,6 +95136,7 @@ sort: by_weight
 下药	xsyke
 销售一空	xsyki
 血手幽灵	xsyl
+小沈阳	xsyp
 下游	xsyr
 小沈阳	xsys
 下院	xsyt
@@ -95377,6 +95429,7 @@ sort: by_weight
 炫耀	xtyk
 选用	xtyl
 宣扬	xtyp
+小太阳	xtypi
 选样	xtypu
 宣扬	xtys
 小太阳	xtysi
@@ -96718,6 +96771,8 @@ sort: by_weight
 吸烟有害健康	xyyko
 心猿意马	xyym
 驯养	xyyp
+喜洋洋	xyype
+喜羊羊	xyypeo
 训养	xyypo
 吸引眼球	xyyq
 巡游	xyyr
@@ -96942,6 +96997,7 @@ sort: by_weight
 学力	xzlioa
 血债累累	xzll
 笑着流泪	xzllu
+喜之郎	xzlp
 雪狼	xzlp
 血流	xzlq
 喜之郎	xzls
@@ -97414,6 +97470,8 @@ sort: by_weight
 欲罢不能	ybbn
 印本	ybbnu
 音波	ybbo
+硬梆梆	ybbp
+硬邦邦	ybbpe
 一病不起	ybbq
 也并不是	ybbs
 硬梆梆	ybbs
@@ -98261,6 +98319,7 @@ sort: by_weight
 一大包	ydbk
 一定不能	ydbn
 一大波	ydbo
+一大帮	ydbp
 一大笔钱	ydbq
 言多必失	ydbs
 一大帮	ydbs
@@ -98491,6 +98550,7 @@ sort: by_weight
 阴道炎	ydyj
 一定要	ydyk
 一带一路	ydyl
+印度洋	ydyp
 有的一拼	ydype
 移动硬盘	ydypu
 压倒一切	ydyq
@@ -98921,6 +98981,7 @@ sort: by_weight
 雁过拔毛	ygbm
 有关部门	ygbme
 英镑	ygbp
+荧光棒	ygbpi
 英磅	ygbpie
 一个鼻孔出气	ygbq
 一个半小时	ygbs
@@ -99404,6 +99465,7 @@ sort: by_weight
 应用	ygylo
 忧国忧民	ygym
 营养	ygyp
+一个样	ygype
 荥阳	ygypi
 严格要求	ygyq
 一个月前	ygyqe
@@ -103110,8 +103172,15 @@ sort: by_weight
 养颜	ypyjoo
 阳爻	ypyk
 仰泳	ypyl
+痒痒	ypyp
+洋洋	ypypa
+泱泱	ypypaa
+阳阳	ypypaa
+样样	ypype
 一批又一批	ypypei
 一片一片	ypypeu
+怏怏	ypypo
+养羊	ypypoo
 痒痒	ypys
 洋洋	ypysa
 泱泱	ypysaa
@@ -104606,7 +104675,6 @@ sort: by_weight
 怏怏	ysypo
 养羊	ysypoo
 有深有浅	ysyq
-痒痒	ysys
 一生一世	ysys
 洋洋	ysysa
 阴盛阳衰	ysysa
@@ -104616,9 +104684,10 @@ sort: by_weight
 样样	ysyse
 有声有色	ysyse
 一时语塞	ysyseo
-怏怏	ysyso
+痒痒	ysyso
 永生永世	ysyso
 养羊	ysysoo
+怏怏	ysysoo
 尧舜禹汤	ysyt
 也是一个问题	ysyta
 一室一厅	ysyte
@@ -106751,6 +106820,7 @@ sort: by_weight
 英译本	yybn
 影印本	yybno
 永远不能	yybnoe
+验孕棒	yybp
 远远不如	yybr
 验孕棒	yybs
 依依不舍	yybs
@@ -107274,6 +107344,10 @@ sort: by_weight
 愈演愈烈	yyyli
 有勇有谋	yyym
 哟哟哟	yyyo
+牙痒痒	yyyp
+也一样	yyypa
+一样样	yyype
+有一样	yyypee
 月有阴晴圆缺	yyyq
 云游	yyyr
 一月一日	yyyre
@@ -107821,7 +107895,10 @@ sort: by_weight
 又脏又累	yzyla
 一直以来	yzyle
 用之于民	yzym
+有这样	yzyp
 岳阳	yzyp
+又怎样	yzypa
+也这样	yzypao
 越洋	yzype
 有朝一日	yzyr
 越有	yzyr
@@ -113531,6 +113608,8 @@ sort: by_weight
 怎么样了	zmyluu
 怎么用	zmyluu
 怎么样呢	zmyn
+这么样	zmyp
+肿么样	zmypu
 正有	zmyr
 正由	zmyre
 诤友	zmyro
@@ -117239,6 +117318,7 @@ sort: by_weight
 最有可能	zykn
 这有可能	zykno
 这也可能	zyknoa
+周永康	zykp
 只要肯登攀	zykpo
 周永康	zyks
 中央空调	zykt
@@ -117492,6 +117572,7 @@ sort: by_weight
 这样一来	zyyl
 自由泳	zyylu
 早有预谋	zyym
+直痒痒	zyyp
 珠圆玉润	zyyr
 终有一日	zyyra
 主要有	zyyro
@@ -117944,6 +118025,11 @@ sort: by_weight
 睁着眼睛	zzyjio
 最重要	zzyk
 最主要	zzyko
+赵紫阳	zzyp
+张朝阳	zzypa
+在这样	zzype
+正中央	zzypei
+照这样	zzypo
 孜孜以求	zzyq
 在这以前	zzyqe
 最重要的事情	zzyqo
