更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -15778,7 +15778,7 @@ sort: by_weight
 敌寇	dikr
 抵扣	dikri
 抵抗	diks
-地跨	diks
+地跨	dikse
 底裤	diku
 滴蜡	dila
 地蜡	dilae
@@ -22834,7 +22834,7 @@ sort: by_weight
 浮空	fukl
 富康	fukp
 浮夸	fuks
-富康	fuks
+富康	fukso
 付款	fukt
 幅宽	fukti
 辅料	fuld
@@ -25823,7 +25823,7 @@ sort: by_weight
 高空	gkkl
 高亢	gkkp
 高亢	gkks
-搞垮	gkks
+搞垮	gkksi
 高宽	gkkt
 高粱	gklc
 高亮	gklco
@@ -39460,7 +39460,7 @@ sort: by_weight
 忌口	jikra
 藉口	jikri
 击垮	jiks
-嵇康	jiks
+嵇康	jiksu
 几款	jikt
 疾苦	jiku
 机库	jikue
@@ -46664,9 +46664,9 @@ sort: by_weight
 抗病	ksbg
 康柏	ksbh
 糠秕	ksbi
-抗暴	ksbk
 挎包	ksbk
-卡萨布兰卡	ksbki
+抗暴	ksbki
+卡萨布兰卡	ksbkii
 康宝	ksbko
 跨步	ksbu
 开山鼻祖	ksbz
@@ -46690,16 +46690,16 @@ sort: by_weight
 跨时代	ksdho
 抗敌	ksdi
 困兽斗	ksdr
-抗毒	ksdu
 跨度	ksdu
+抗毒	ksdui
 康师傅	ksf
 快速反击	ksfj
 抗风	ksfm
 亢奋	ksfn
 康复	ksfu
-夸父	ksfu
-抗非	ksfw
+夸父	ksfue
 考试范围	ksfw
+抗非	ksfwi
 快速发展	ksfz
 口水歌	ksg
 康乾	ksgj
@@ -46716,18 +46716,18 @@ sort: by_weight
 跨行	kshp
 康辉	kshv
 跨世纪	ksj
-亢进	ksjb
 跨进	ksjb
+亢进	ksjbo
 夸奖	ksjc
 抗缴	ksjd
 扛着	ksje
-挎着	ksje
+挎着	ksjei
 康健	ksjf
 跨境	ksjg
-抗击	ksji
 跨级	ksji
+抗击	ksjii
 康佳	ksjs
-匡时济世	ksjs
+匡时济世	ksjse
 抗拒	ksju
 康居	ksjuo
 抗拒	ksjv
@@ -46740,14 +46740,14 @@ sort: by_weight
 夸口	kskr
 凯瑟琳	ksl
 开始了	ksle
-康乐	ksle
 垮了	kslee
+康乐	ksleo
 抗联	kslf
 伉俪	ksli
 抗力	kslii
 跨栏	kslj
-抗老	kslk
 抗衰老	kslk
+抗老	kslki
 开塞露	kslu
 快速路	ksluo
 可数名词	ksmc
@@ -46766,7 +46766,7 @@ sort: by_weight
 快速排序	kspx
 看上去	ksq
 扛枪	ksqc
-旷世奇才	ksqc
+旷世奇才	ksqco
 康桥	ksqd
 快速启动	ksqd
 扛起	ksqi
@@ -46780,17 +46780,17 @@ sort: by_weight
 口舌生疮	kssc
 夸饰	kssi
 夸示	kssie
-抗生	kssm
 跨省	kssm
+抗生	kssmi
 考试说明	kssmu
 看守所	ksso
 炕上	kssp
 跨上	kssp
 抗生素	kssu
-抗诉	kssu
+抗诉	kssui
 抗税	kssv
-康泰	ksth
 垮台	ksth
+康泰	kstho
 抗体	ksti
 卡斯特罗	kstl
 空手套白狼	kstlo
@@ -46816,8 +46816,8 @@ sort: by_weight
 跨越	ksyh
 跨跃	ksyho
 抗议	ksyi
-抗药	ksyk
 夸耀	ksyk
+抗药	ksyki
 客似云来	ksyl
 跨洋	ksyp
 跨洋	ksys
@@ -46833,12 +46833,12 @@ sort: by_weight
 快速增长	kszc
 困兽之斗	kszd
 扛着	ksze
-挎着	ksze
+挎着	kszei
 抗灾	kszh
-挎在	kszh
+挎在	kszhi
 抗旨	kszi
 抗战	kszj
-夸赞	kszj
+夸赞	kszje
 哭丧着脸	kszl
 抗争	kszm
 抗震	kszn
