更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -4397,6 +4397,8 @@ sort: by_weight
 膀臂	bpbi
 帮办	bpbj
 不破不立	bpbl
+帮帮	bpbp
+棒棒	bpbpe
 帮帮	bpbs
 不胖不瘦	bpbs
 棒棒	bpbse
@@ -4441,6 +4443,7 @@ sort: by_weight
 邦联	bplf
 杯盘狼藉	bplj
 绑牢	bplk
+帮忙	bpmp
 帮忙	bpms
 不怕没柴烧	bpms
 帮你	bpni
@@ -4473,6 +4476,7 @@ sort: by_weight
 梆硬	bpyg
 榜眼	bpyj
 帮佣	bpyl
+榜样	bpyp
 榜样	bpys
 白跑一趟	bpyt
 不怕一万	bpyw
@@ -46438,6 +46442,7 @@ sort: by_weight
 抗老	kplk
 卡佩罗	kplo
 抗命	kpmg
+康忙	kpmp
 康忙	kpms
 抗逆	kpni
 卡票券	kpq
@@ -50794,6 +50799,8 @@ sort: by_weight
 浪客	lpkea
 连篇累牍	lpld
 拉普拉斯变换	lplh
+朗朗	lplp
+郎朗	lplpo
 拉普拉斯	lpls
 朗朗	lpls
 郎朗	lplso
@@ -55672,6 +55679,8 @@ sort: by_weight
 忙乱	mplt
 忙碌	mplu
 没凭没据	mpmj
+茫茫	mpmp
+莽莽	mpmpi
 茫茫	mpms
 莽莽	mpmsi
 盲目	mpmu
@@ -61875,6 +61884,7 @@ sort: by_weight
 啪啪啪	ppp
 拍拍屁股	pppg
 乒乒乓乓	pppp
+胖胖	ppppu
 拍拍屁股走人	pppr
 胖胖	pppsu
 乒乓球	ppq
@@ -103007,6 +103017,7 @@ sort: by_weight
 有屁快放	ypkf
 样刊	ypkj
 仰靠	ypkk
+阳亢	ypkp
 阳亢	ypks
 杨坤	ypky
 压迫力	ypl
