更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -93764,9 +93764,9 @@ sort: by_weight
 泄劲	xkjba
 鞋匠	xkjc
 邪教	xkjd
-星空键道	xkjd
 斜角	xkjdi
 歇脚	xkjdo
+星空键道	xkjdo
 斜着	xkjei
 歇着	xkjeoo
 写着	xkjeoo
@@ -93908,8 +93908,8 @@ sort: by_weight
 蟹蟹	xkxxu
 谐谑	xkxz
 谐音	xkyb
-星空一笔	xkyb
 鞋印	xkybe
+星空一笔	xkybo
 星空一道	xkyd
 歇业	xkye
 鞋业	xkyee
