--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -16501,10 +16501,10 @@ sort: by_weight
 担子	djzii
 掸子	djziia
 电解质	djziiu
-单子	djzio
+单字	djzio
+单子	djzioa
 单指	djzioi
 单只	djzioo
-单字	djzioo
 单质	djziou
 胆汁	djziu
 胆战	djzj
@@ -39393,7 +39393,7 @@ sort: by_weight
 机警	jijge
 机井	jijgee
 几经	jijgu
-急急	jiji
+积极	jiji
 鸡鸡	jijia
 济济	jijiaa
 基极	jijie
@@ -39401,9 +39401,9 @@ sort: by_weight
 技击	jijiie
 唧唧	jijio
 寂寂	jijioo
-积极	jijiu
-几级	jijiua
+几级	jijiu
 几集	jijiui
+急急	jijiuu
 急救	jijq
 祭酒	jijqu
 冀州	jijr
@@ -110065,10 +110065,10 @@ sort: by_weight
 致辞	zicieu
 值此	zicii
 指斥	ziciiu
-之词	zicio
+字词	zicio
 只此	zicioi
+之词	zicioo
 只吃	zicioo
-字词	zicioo
 之辞	ziciou
 自此	ziciu
 直尺	ziciua
