--- a/BackDict/xkyddz.dict.yaml
+++ b/BackDict/xkyddz.dict.yaml
@@ -934,16 +934,65 @@ sort: by_weight
 怆	ccooi
 怆	ccooia
 窗	ccooui
+抽	cd
+丑	cda
+绸	cdaa
+绸	cdaaua
+丑	cdaiee
+酬	cde
+辏	cdea
+辏	cdeaee
+楱	cdee
+梼	cdeee
+楱	cdeeee
+梼	cdeeeu
+酬	cdeiou
+椆	cdeu
+椆	cdeuae
+畴	cdi
+瞅	cdia
+帱	cdiae
+帱	cdiaee
+畴	cdiaee
+畤	cdiaeo
+瞅	cdiaue
+俦	cdie
+俦	cdieee
+雠	cdio
+犨	cdioe
+犨	cdioeu
+雠	cdiooa
+仇	cdiu
+仇	cdiuaa
+抽	cdiuia
+凑	cdo
+瘳	cdoe
+瘳	cdoeao
+凑	cdoeee
+踌	cdoi
+踌	cdoiee
+惆	cdoo
+惆	cdooua
+愁	cdu
+筹	cdue
+腠	cduee
+筹	cdueee
+腠	cdueee
+愁	cdueoa
+稠	cdueu
+稠	cdueua
+臭	cdui
+臭	cduieu
 车	ce
 测	cea
 测	ceaaoi
 澈	ceao
 澈	ceaoea
-栅	cee
+厕	cee
 车	ceeaei
 坼	ceeo
 坼	ceeouu
-厕	ceeu
+栅	ceeu
 厕	ceeuao
 栅	ceeuau
 砗	ceeue
@@ -966,6 +1015,52 @@ sort: by_weight
 掣	ceueiu
 彻	ceuu
 彻	ceuuea
+传	cf
+巛	cfa
+巛	cfaaaa
+椽	cfe
+椽	cfeaae
+堾	cfeo
+堾	cfeoee
+串	cfi
+遄	cfia
+串	cfiaei
+圌	cfiai
+圌	cfiaia
+遄	cfiaoa
+传	cfieea
+钏	cfio
+镩	cfioo
+镩	cfiooo
+钏	cfioui
+攒	cfiu
+撺	cfiuo
+撺	cfiuoo
+攒	cfiuue
+穿	cfo
+喘	cfoi
+喘	cfoiai
+蹿	cfoio
+蹿	cfoioo
+窜	cfoo
+穿	cfooea
+窜	cfooia
+船	cfu
+舛	cfua
+舛	cfuaea
+篡	cfue
+篡	cfueia
+氚	cfueu
+氚	cfueui
+川	cfui
+爨	cfuie
+爨	cfuiee
+川	cfuiii
+汆	cfuo
+汆	cfuoaa
+舡	cfuu
+舡	cfuuei
+船	cfuuua
 揣	cg
 搋	cgi
 揣	cgiuia
@@ -1426,9 +1521,9 @@ sort: by_weight
 庱	cmoeeo
 逞	cmoeo
 逞	cmoeoa
-晟	cmoi
+蹭	cmoi
+晟	cmoie
 晟	cmoieu
-蹭	cmoio
 蹭	cmoiou
 噌	cmoo
 憕	cmooa
@@ -1683,7 +1778,39 @@ sort: by_weight
 臭	crui
 臭	cruieu
 歘	cs
+测	csa
+测	csaaoi
+澈	csao
+澈	csaoea
+车	cse
+车	cseaei
+坼	cseo
+坼	cseouu
+厕	cseu
+栅	cseua
+厕	cseuao
+栅	cseuau
+砗	cseue
+砗	cseuea
+侧	csi
+侧	csiaoi
+撤	csiu
+扯	csiui
+扯	csiuie
+撤	csiuoe
+恻	cso
+㬚	csoi
+㬚	csoioe
+恻	csooao
 歘	csouua
+策	csu
+册	csua
+册	csuaua
+掣	csue
+策	csueei
+掣	csueiu
+彻	csuu
+彻	csuuea
 传	ct
 巛	cta
 巛	ctaaaa
@@ -2431,7 +2558,51 @@ sort: by_weight
 簦	dmueao
 等	dmueeo
 扽	dn
+叠	dna
+绖	dnaa
+绖	dnaaea
+叠	dnaoia
+碟	dne
+楪	dnee
+楪	dneeii
+堞	dneo
+垤	dneoe
+垤	dneoea
+堞	dneoei
+碟	dneuei
+蝶	dni
+蝶	dniaei
+佚	dniu
+揲	dniue
 扽	dniuea
+佚	dniuee
+揲	dniuei
+跌	dno
+谍	dnoa
+谍	dnoaei
+喋	dnoe
+咥	dnoea
+咥	dnoeao
+喋	dnoeii
+蹀	dnoi
+蹀	dnoiei
+昳	dnoiu
+跌	dnoiue
+昳	dnoiue
+爹	dnu
+鲽	dnua
+鲽	dnuaei
+迭	dnue
+迭	dnueoa
+牒	dnui
+牒	dnuiei
+耋	dnuo
+耋	dnuoea
+䏲	dnuou
+爹	dnuoua
+䏲	dnuoua
+瓞	dnuu
+瓞	dnuuue
 多	do
 隋	doa
 驮	doaa
@@ -10380,36 +10551,6 @@ sort: by_weight
 耆	qiuooi
 颀	qiuu
 颀	qiuueu
-且	qk
-切	qke
-切	qkeaau
-挈	qkee
-挈	qkeeiu
-趄	qkeo
-趄	qkeoia
-砌	qkeu
-砌	qkeuea
-茄	qki
-伽	qkia
-且	qkiaee
-伽	qkiauo
-茄	qkiiau
-锲	qkio
-锲	qkioee
-窃	qko
-妾	qkoe
-妾	qkoeau
-怯	qkoo
-惬	qkooe
-窃	qkooea
-惬	qkooee
-怯	qkooeo
-箧	qku
-箧	qkueee
-癿	qkui
-癿	qkuiaa
-郄	qkuo
-郄	qkuoai
 穷	ql
 嬛	qla
 嬛	qlauia
@@ -10432,6 +10573,36 @@ sort: by_weight
 穷	qlooau
 筇	qlu
 筇	qlueei
+且	qn
+切	qne
+切	qneaau
+挈	qnee
+挈	qneeiu
+趄	qneo
+趄	qneoia
+砌	qneu
+砌	qneuea
+茄	qni
+伽	qnia
+且	qniaee
+伽	qniauo
+茄	qniiau
+锲	qnio
+锲	qnioee
+窃	qno
+妾	qnoe
+妾	qnoeau
+怯	qnoo
+惬	qnooe
+窃	qnooea
+惬	qnooee
+怯	qnooeo
+箧	qnu
+箧	qnueee
+癿	qnui
+癿	qnuiaa
+郄	qnuo
+郄	qnuoai
 求	qq
 湫	qqa
 泅	qqai
@@ -12625,6 +12796,16 @@ sort: by_weight
 螣	tmuoue
 縢	tmuoue
 䲢	tmuoue
+铁	tn
+贴	tna
+贴	tnaoie
+餮	tne
+餮	tneuio
+帖	tni
+帖	tniaie
+萜	tnii
+萜	tniiia
+铁	tnioue
 托	to
 陀	toa
 驼	toaa
@@ -13014,6 +13195,240 @@ sort: by_weight
 皑	vhui
 皑	vhuiia
 爱	vhuoeu
+以	vi
+已	via
+乙	viaa
+驿	viaaa
+乙	viaaaa
+绎	viaaao
+驿	viaaao
+彝	viaao
+彝	viaaou
+缢	viaaou
+异	viae
+已	viaeaa
+异	viaeeu
+尾	viaeu
+尾	viaeue
+洢	viai
+潩	viaia
+洢	viaiae
+潩	viaiae
+矣	viao
+贻	viaoa
+浥	viaoai
+贻	viaoao
+羿	viaoe
+羿	viaoeu
+翼	viaoi
+翼	viaoia
+以	viaoii
+翌	viaoo
+翌	viaooe
+溢	viaou
+矣	viaoue
+溢	viaoue
+姨	viau
+漪	viaua
+㴔	viauaa
+漪	viauau
+嫕	viaue
+姨	viauea
+嫕	viaueu
+沂	viauu
+沂	viauue
+医	vie
+夷	viea
+夷	vieaea
+匜	vieai
+匜	vieaia
+弋	vieao
+弋	vieaoo
+轶	vieau
+轶	vieaue
+椅	viee
+杙	vieea
+杙	vieeao
+一	vieeee
+椅	vieeuo
+颐	viei
+酏	vieia
+酏	vieiai
+勚	vieiau
+颐	vieieu
+懿	vieo
+圯	vieoa
+圯	vieoae
+壹	vieoe
+椸	vieoea
+壹	vieoeo
+埸	vieoo
+懿	vieooe
+埸	vieooi
+鹝	vieou
+鹝	vieoua
+翳	vieu
+繄	vieua
+繄	vieuaa
+翳	vieuao
+殪	vieue
+医	vieuee
+殪	vieueo
+枍	vieuo
+枍	vieuoe
+欹	vieuu
+欹	vieuua
+依	vii
+亿	viia
+眙	viiaa
+亿	viiaaa
+眙	viiaao
+峄	viiaao
+伊	viiae
+伊	viiaee
+遗	viiao
+遗	viiaoa
+蜴	viiaoi
+蛇	viiaoo
+佁	viiaoo
+蚁	viiaou
+螠	viiaou
+嶷	viiau
+黟	viiaua
+嶷	viiaua
+屹	viiaue
+倚	viie
+倚	viieuo
+艺	viii
+苡	viiia
+艺	viiiaa
+苡	viiiao
+荑	viiie
+荑	viiiea
+薏	viiio
+薏	viiioe
+艾	viiiu
+艾	viiiuo
+食	viio
+钇	viioa
+钇	viioaa
+食	viioae
+㑊	viioe
+依	viioeu
+㑊	viioeu
+镒	viioo
+铱	viiooe
+镱	viiooe
+镒	viioou
+仪	viiou
+仪	viiouo
+抑	viiu
+佚	viiue
+仡	viiuea
+佚	viiuee
+揖	viiuo
+挹	viiuoa
+揖	viiuoe
+佾	viiuou
+抑	viiuua
+意	vio
+议	vioa
+译	vioaa
+诒	vioaao
+译	vioaao
+祎	vioae
+祎	vioaee
+邑	vioai
+邑	vioaie
+谊	vioao
+扆	vioaoe
+谊	vioaoo
+议	vioaou
+诣	vioau
+扅	vioaua
+诣	vioaua
+亦	vioe
+咦	vioea
+咦	vioeae
+翊	vioeao
+奕	vioee
+痍	vioeea
+瘗	vioeeo
+弈	vioeeu
+奕	vioeeu
+裔	vioei
+裔	vioeia
+廙	vioeia
+裛	vioeo
+裛	vioeoa
+意	vioeoa
+癔	vioeoe
+衣	vioeu
+衣	vioeua
+疫	vioeua
+毅	vioeua
+旖	vioeue
+亦	vioeui
+易	vioi
+咿	vioia
+咿	vioiae
+呓	vioii
+呓	vioiia
+易	vioiua
+宜	vioo
+忆	viooa
+忆	viooaa
+怡	viooao
+怿	viooao
+噫	viooe
+宧	viooei
+噫	viooeo
+宜	viooia
+悒	viooo
+悒	vioooa
+嗌	vioou
+嗌	viooue
+义	viou
+熠	vioua
+熠	viouao
+益	vioui
+益	viouia
+燚	viouo
+义	viouoo
+燚	viouou
+疑	viu
+逸	viua
+饴	viuaa
+肄	viuaae
+饴	viuaao
+疑	viuaao
+猗	viuae
+猗	viuaeu
+逸	viuaoa
+移	viue
+胰	viuea
+胰	viueae
+迤	viueo
+迤	viueoa
+簃	viueu
+移	viueua
+簃	viueue
+射	viui
+射	viuiei
+劓	viuii
+劓	viuiii
+臆	viuo
+臆	viuoeo
+刈	viuoi
+刈	viuoii
+乂	viuoo
+乂	viuooo
+鹢	viuou
+鹢	viuoua
+役	viuu
+舣	viuuo
+舣	viuuou
+役	viuuua
 安	vj
 厂	vje
 鞍	vjei
@@ -13113,6 +13528,67 @@ sort: by_weight
 翱	vkui
 翱	vkuiao
 奥	vkuieu
+用	vl
+勇	vla
+涌	vlaa
+邕	vlaao
+邕	vlaaoa
+涌	vlaaoi
+泳	vlao
+泳	vlaoaa
+勇	vlaoau
+澭	vlaoe
+澭	vlaoea
+甬	vlaoi
+甬	vlaoia
+恿	vlaoo
+恿	vlaooa
+墉	vle
+栐	vleo
+埇	vleoa
+栐	vleoaa
+埇	vleoao
+墉	vleooe
+拥	vli
+蛹	vlia
+蛹	vliaao
+俑	vliao
+俑	vliaoi
+镛	vlio
+镛	vliooe
+佣	vliu
+佣	vliuae
+拥	vliuua
+永	vlo
+永	vloaau
+雍	vloe
+庸	vloea
+雍	vloeaa
+庸	vloeae
+鄘	vloeai
+壅	vloee
+壅	vloeeo
+饔	vloei
+饔	vloeio
+痈	vloeu
+痈	vloeua
+踊	vloi
+喁	vloia
+喁	vloiae
+踊	vloiao
+咏	vloo
+咏	vlooaa
+慵	vlooo
+慵	vloooe
+㶲	vloou
+㶲	vlooua
+臃	vlu
+鳙	vlua
+鲬	vluaa
+鲬	vluaao
+用	vluaee
+鳙	vluaoe
+臃	vluoea
 恩	vm
 蒽	vmi
 恩	vmiaoa
@@ -14275,100 +14751,199 @@ sort: by_weight
 徙	xiuuie
 肸	xiuuo
 肸	xiuuou
-写	xk
-泄	xka
-缬	xkaa
-绁	xkaae
-绁	xkaaei
-缬	xkaaeo
-屑	xkae
-渫	xkaei
-泄	xkaeii
-渫	xkaeii
-屑	xkaeio
-瀣	xkai
-瀣	xkaieu
-泻	xkao
-泻	xkaoae
-勰	xkau
-澥	xkaua
-澥	xkauau
-勰	xkauia
-邪	xke
-榍	xkea
-邪	xkeaai
-榍	xkeaeu
-契	xkee
-絜	xkeea
-絜	xkeeaa
-械	xkeee
-楔	xkeeee
-契	xkeeeu
-械	xkeeeu
-鞋	xkei
-鞋	xkeieo
-颉	xkeo
-颉	xkeoeu
-榭	xkeu
-榭	xkeuia
-些	xki
-蝎	xkia
-蝎	xkiaoi
-斜	xkie
-偕	xkiea
-偕	xkieau
-偰	xkiee
-些	xkieee
-偰	xkieei
-㙦	xkieeo
-斜	xkieoo
-薤	xkii
-薤	xkiieu
-薢	xkiiu
-薢	xkiiua
-携	xkiu
-挟	xkiue
-揳	xkiuee
-挟	xkiueo
-撷	xkiueo
-携	xkiuio
-谢	xko
-谐	xkoa
-谐	xkoaea
-写	xkoaea
-谢	xkoaui
-亵	xkoe
-燮	xkoea
-燮	xkoeao
-亵	xkoeiu
-廨	xkoeu
-廨	xkoeua
-歇	xkoi
-躞	xkoio
-躞	xkoioe
-歇	xkoiua
-懈	xkoo
-懈	xkooua
-叶	xkou
-叶	xkouoo
-解	xku
-胁	xkua
-解	xkuaau
-鲑	xkuae
-鲑	xkuaeo
-蟹	xkuai
-蟹	xkuaia
-邂	xkuao
-邂	xkuaoa
-獬	xkuau
-獬	xkuaua
-胁	xkuauo
-卸	xkue
-卸	xkueai
-血	xkui
-血	xkuiai
-协	xkuo
-协	xkuoau
+先	xj
+线	xja
+纤	xjaa
+线	xjaaee
+缐	xjaau
+纤	xjaaue
+缐	xjaaui
+弦	xjae
+弦	xjaeoe
+限	xjai
+限	xjaiae
+险	xjaii
+险	xjaiie
+陷	xjaiu
+陷	xjaiua
+嫌	xjau
+涎	xjaui
+涎	xjauie
+孅	xjauii
+娴	xjauo
+娴	xjauoi
+嫌	xjauou
+现	xje
+现	xjeeia
+酰	xjei
+酰	xjeiue
+霰	xjeo
+霰	xjeoei
+咸	xjeu
+燹	xjeuo
+咸	xjeuoo
+燹	xjeuou
+仙	xji
+县	xjia
+县	xjiaao
+蚬	xjiai
+蚬	xjiaia
+岘	xjiaia
+崄	xjiaie
+见	xjiau
+见	xjiaua
+盷	xjiaua
+贤	xjii
+仙	xjiiai
+贤	xjiiao
+苋	xjiii
+苋	xjiiia
+莶	xjiiie
+藓	xjiiu
+藓	xjiiua
+铣	xjio
+伭	xjioe
+伭	xjioea
+锨	xjiou
+铣	xjioue
+锨	xjiouu
+掀	xjiu
+掺	xjiua
+挦	xjiuae
+掺	xjiuao
+掀	xjiuuu
+显	xjo
+诜	xjoa
+禒	xjoaa
+禒	xjoaaa
+祆	xjoae
+祆	xjoaee
+诜	xjoaue
+痫	xjoe
+咁	xjoei
+咁	xjoeii
+痫	xjoeoi
+冼	xjoeu
+冼	xjoeue
+闲	xjoi
+㬎	xjoia
+㬎	xjoiaa
+闲	xjoiee
+显	xjoiii
+暹	xjoio
+暹	xjoioa
+跣	xjoiu
+鹇	xjoiua
+跹	xjoiue
+跣	xjoiue
+宪	xjoo
+忺	xjoou
+忺	xjooua
+宪	xjooue
+羡	xjou
+籼	xjoui
+籼	xjouia
+羡	xjouoe
+鲜	xju
+馅	xjua
+𤞤	xjuae
+𤞤	xjuaei
+猃	xjuai
+猃	xjuaie
+鲜	xjuaou
+狝	xjuaua
+馅	xjuaua
+筅	xjue
+氙	xjuei
+氙	xjueia
+先	xjueua
+筅	xjueue
+献	xjuo
+献	xjuoeu
+衔	xjuu
+腺	xjuui
+腺	xjuuia
+衔	xjuuio
+舷	xjuuo
+舷	xjuuoe
+笑	xk
+消	xka
+骁	xkaa
+骁	xkaaea
+绡	xkaai
+绡	xkaaio
+潇	xkai
+潇	xkaiia
+消	xkaiou
+洨	xkao
+洨	xkaoeu
+淆	xkau
+姣	xkauo
+姣	xkauoe
+淆	xkauoe
+涍	xkauoe
+校	xke
+霄	xkeo
+枵	xkeoe
+枵	xkeoea
+校	xkeoeu
+霄	xkeoio
+硝	xkeu
+硝	xkeuio
+销	xki
+崤	xkia
+蛸	xkiai
+蟏	xkiaii
+蛸	xkiaio
+崤	xkiauo
+萧	xkii
+萧	xkiiae
+翛	xkiiu
+翛	xkiiua
+削	xkio
+削	xkioii
+销	xkioio
+逍	xkioo
+逍	xkiooa
+肖	xkiou
+肖	xkiouu
+小	xkiuoo
+效	xko
+啸	xkoa
+啸	xkoaee
+哓	xkoe
+哓	xkoeau
+鸮	xkoeu
+鸮	xkoeua
+效	xkoeue
+晓	xkoi
+晓	xkoiea
+宵	xkoo
+嚣	xkooe
+嚣	xkooeu
+宵	xkooio
+恔	xkooo
+恔	xkoooe
+敩	xkoou
+敩	xkooue
+哮	xkou
+哮	xkouoe
+箫	xku
+枭	xkua
+枭	xkuaee
+虓	xkuai
+虓	xkuaie
+猇	xkuaie
+筱	xkue
+箫	xkueae
+筱	xkueii
+笑	xkueue
+魈	xkui
+魈	xkuiio
+皛	xkuiu
+皛	xkuiui
+孝	xkuo
+孝	xkuoai
 兄	xl
 熊	xla
 熊	xlaooo
@@ -14391,6 +14966,176 @@ sort: by_weight
 凶	xluoai
 胸	xluu
 胸	xluuau
+写	xn
+泄	xna
+缬	xnaa
+绁	xnaae
+绁	xnaaei
+缬	xnaaeo
+屑	xnae
+渫	xnaei
+泄	xnaeii
+渫	xnaeii
+屑	xnaeio
+瀣	xnai
+瀣	xnaieu
+泻	xnao
+泻	xnaoae
+勰	xnau
+澥	xnaua
+澥	xnauau
+勰	xnauia
+邪	xne
+榍	xnea
+邪	xneaai
+榍	xneaeu
+契	xnee
+絜	xneea
+絜	xneeaa
+械	xneee
+楔	xneeee
+契	xneeeu
+械	xneeeu
+鞋	xnei
+鞋	xneieo
+颉	xneo
+颉	xneoeu
+榭	xneu
+榭	xneuia
+些	xni
+蝎	xnia
+蝎	xniaoi
+斜	xnie
+偕	xniea
+偕	xnieau
+偰	xniee
+些	xnieee
+偰	xnieei
+㙦	xnieeo
+斜	xnieoo
+薤	xnii
+薤	xniieu
+薢	xniiu
+薢	xniiua
+携	xniu
+挟	xniue
+揳	xniuee
+挟	xniueo
+撷	xniueo
+携	xniuio
+谢	xno
+谐	xnoa
+谐	xnoaea
+写	xnoaea
+谢	xnoaui
+亵	xnoe
+燮	xnoea
+燮	xnoeao
+亵	xnoeiu
+廨	xnoeu
+廨	xnoeua
+歇	xnoi
+躞	xnoio
+躞	xnoioe
+歇	xnoiua
+懈	xnoo
+懈	xnooua
+叶	xnou
+叶	xnouoo
+解	xnu
+胁	xnua
+解	xnuaau
+鲑	xnuae
+鲑	xnuaeo
+蟹	xnuai
+蟹	xnuaia
+邂	xnuao
+邂	xnuaoa
+獬	xnuau
+獬	xnuaua
+胁	xnuauo
+卸	xnue
+卸	xnueai
+血	xnui
+血	xnuiai
+协	xnuo
+协	xnuoau
+选	xo
+渲	xoa
+绚	xoaa
+绚	xoaaua
+漩	xoao
+泫	xoaoe
+漩	xoaoea
+泫	xoaoea
+渲	xoaooa
+嬛	xoau
+嬛	xoauia
+轩	xoe
+轩	xoeaee
+璇	xoee
+玹	xoeeo
+玹	xoeeoe
+璇	xoeeoe
+瑄	xoeeoo
+琄	xoeeou
+楦	xoeo
+楦	xoeooa
+碹	xoeu
+碹	xoeuoo
+悬	xoi
+眩	xoia
+翾	xoiaa
+翾	xoiaao
+悬	xoiaoa
+眩	xoiaoe
+萱	xoii
+儇	xoiia
+儇	xoiiai
+萱	xoiioo
+铉	xoio
+镟	xoioo
+铉	xoiooe
+镟	xoiooe
+揎	xoiu
+揎	xoiuoo
+宣	xoo
+谖	xooa
+禤	xooai
+禤	xooaia
+谖	xooauo
+玄	xooe
+玄	xooeaa
+痃	xooeo
+痃	xooeoe
+咺	xooeoi
+旋	xooeu
+癣	xooeua
+旋	xooeue
+暄	xooi
+晅	xooie
+晅	xooieo
+暶	xooio
+暶	xooioe
+昡	xooioe
+暄	xooioo
+暅	xooioo
+喧	xooo
+宣	xoooeo
+吅	xoooo
+喧	xooooa
+吅	xooooo
+愃	xooooo
+券	xoou
+券	xoouau
+烜	xooue
+烜	xooueo
+炫	xoouo
+炫	xoouoe
+煊	xoouoo
+衒	xou
+选	xoueoa
+衒	xouuoe
 修	xq
 绣	xqa
 绣	xqaaue
@@ -15092,6 +15837,88 @@ sort: by_weight
 氤	ybueia
 殷	ybuu
 殷	ybuuua
+要	yd
+幺	yda
+约	ydaa
+幺	ydaaoo
+约	ydaaua
+滧	ydao
+滧	ydaoeu
+妖	ydau
+姚	ydauu
+妖	ydauue
+姚	ydauuo
+媱	ydauuo
+尧	yde
+轺	ydea
+靿	ydeaa
+靿	ydeaaa
+轺	ydeaau
+尧	ydeaeu
+瑶	ydee
+珧	ydeeu
+珧	ydeeuo
+瑶	ydeeuo
+要	ydeiau
+杳	ydeo
+㙘	ydeoe
+㙘	ydeoei
+垚	ydeoeo
+杳	ydeoii
+药	ydi
+崾	ydia
+峣	ydiae
+峣	ydiaea
+崾	ydiaei
+侥	ydie
+侥	ydieau
+药	ydiiaa
+耀	ydio
+耀	ydioao
+钥	ydiou
+铫	ydiouo
+钥	ydiouu
+摇	ydiu
+摇	ydiuuo
+咬	ydo
+谣	ydoa
+吆	ydoaa
+吆	ydoaao
+谣	ydoauo
+疟	ydoe
+疟	ydoeea
+曜	ydoi
+曜	ydoiao
+窑	ydoo
+窈	ydooa
+窈	ydooaa
+咬	ydooeu
+窅	ydooi
+窅	ydooia
+窑	ydooue
+腰	ydu
+鳐	ydua
+乐	yduai
+乐	yduaiu
+猺	yduau
+猺	yduauo
+鳐	yduauo
+夭	ydue
+腰	ydueia
+夭	ydueuo
+邀	ydui
+邀	yduioa
+遥	yduo
+肴	yduoe
+肴	yduoeu
+遥	yduooa
+繇	yduou
+繇	yduoua
+鹞	yduoua
+舀	yduoui
+爻	yduouo
+徭	yduu
+徭	yduuuo
 也	ye
 液	yea
 也	yeaiaa
@@ -15152,6 +15979,150 @@ sort: by_weight
 腋	yeuo
 爷	yeuoai
 腋	yeuoei
+言	yf
+验	yfa
+沇	yfaa
+验	yfaaie
+沇	yfaaou
+淹	yfae
+滟	yfaee
+滟	yfaeee
+湮	yfaei
+湮	yfaeia
+漹	yfaeie
+淹	yfaeuo
+渰	yfai
+渰	yfaieo
+演	yfao
+演	yfaooa
+沿	yfau
+沿	yfauao
+嫣	yfaue
+妍	yfauee
+嫣	yfauei
+嬿	yfauei
+研	yfe
+艳	yfee
+琰	yfeeo
+琰	yfeeou
+艳	yfeeua
+严	yfei
+鄢	yfeia
+鄢	yfeiai
+焉	yfeie
+焉	yfeiea
+酽	yfeiei
+严	yfeiio
+燕	yfeio
+燕	yfeioo
+歅	yfeiu
+歅	yfeiua
+盐	yfeo
+郾	yfeoa
+郾	yfeoai
+堰	yfeoe
+墕	yfeoei
+堰	yfeoeo
+盐	yfeoia
+棪	yfeoo
+棪	yfeoou
+埏	yfeou
+埏	yfeoui
+厌	yfeu
+檐	yfeua
+檐	yfeuae
+赝	yfeuao
+䶮	yfeue
+研	yfeuee
+䶮	yfeuee
+厌	yfeueu
+雁	yfeui
+奄	yfeuia
+厣	yfeuia
+黡	yfeuia
+砚	yfeuia
+雁	yfeuii
+餍	yfeuio
+魇	yfeuu
+魇	yfeuui
+眼	yfi
+岩	yfia
+觃	yfiaa
+眼	yfiaae
+觃	yfiaai
+罨	yfiae
+蝘	yfiaeo
+崦	yfiaeu
+岩	yfiaeu
+罨	yfiaeu
+蜒	yfiau
+蜒	yfiaui
+偃	yfie
+甗	yfiee
+甗	yfieea
+弇	yfieeu
+俨	yfiei
+虤	yfieie
+俨	yfieii
+偃	yfieoi
+菸	yfii
+芫	yfiie
+芫	yfiiee
+菸	yfiioe
+掩	yfiu
+掩	yfiueu
+烟	yfo
+谚	yfoa
+扊	yfoao
+谚	yfoaoe
+扊	yfoaou
+谳	yfoau
+谳	yfoauo
+颜	yfoe
+言	yfoeee
+颜	yfoeeu
+彦	yfoeu
+烻	yfoeui
+兖	yfoeuo
+彦	yfoeuu
+咽	yfoi
+咽	yfoiae
+阉	yfoie
+闫	yfoiee
+阉	yfoieu
+晏	yfoio
+晏	yfoioo
+阎	yfoiu
+阎	yfoiua
+宴	yfoo
+恹	yfooe
+戭	yfooea
+唁	yfooee
+恹	yfooeu
+宴	yfoooi
+炎	yfou
+剡	yfoui
+烟	yfouia
+剡	yfouii
+焱	yfouo
+炎	yfouou
+焱	yfouou
+焰	yfouu
+焰	yfouua
+延	yfu
+筵	yfue
+腌	yfueu
+筵	yfueui
+腌	yfueuo
+胭	yfui
+胭	yfuiae
+延	yfuiao
+鼹	yfuio
+鼹	yfuioi
+殷	yfuu
+衍	yfuua
+衍	yfuuae
+殷	yfuuua
 应	yg
 盈	yga
 缨	ygaa
@@ -16710,6 +17681,40 @@ sort: by_weight
 齇	zauiie
 臜	zauo
 臜	zauoue
+转	zb
+赚	zba
+缵	zbaa
+缵	zbaaue
+赚	zbaoou
+专	zbe
+转	zbeaee
+瑑	zbee
+瑑	zbeeaa
+专	zbeeao
+砖	zbeu
+砖	zbeuee
+传	zbi
+颛	zbia
+僎	zbiaa
+僎	zbiaaa
+颛	zbiaeu
+传	zbieea
+钻	zbio
+钻	zbioie
+撰	zbiu
+撰	zbiuae
+攥	zbiuu
+攥	zbiuue
+啭	zbo
+啭	zboeai
+躜	zboi
+躜	zboiue
+纂	zbu
+馔	zbua
+馔	zbuaae
+篆	zbue
+篆	zbueaa
+纂	zbueia
 装	zc
 奘	zca
 奘	zcaieu
