更新：备份旧词库

--- a/BackDict/xkydcz.dict.yaml
+++ b/BackDict/xkydcz.dict.yaml
@@ -64717,7 +64717,7 @@ sort: by_weight
 乒乒乓乓	pppp
 胖胖	ppppu
 拍拍屁股走人	pppr
-胖胖	pppsu
+胖胖	ppps
 乒乓球	ppq
 乒乓球拍	ppqp
 翩翩起舞	ppqw
@@ -64850,8 +64850,8 @@ sort: by_weight
 拼死拼活	psph
 庞氏骗局	pspj
 婆说婆有理	pspl
-胖胖	psppu
-胖胖	pspsu
+胖胖	pspp
+胖胖	psps
 庞然	psrj
 旁人	psrn
 胖人	psrnu
